Add latest translations from CrowdIn

--- a/obs/data/locale/de-DE.ini
+++ b/obs/data/locale/de-DE.ini
@@ -19,6 +19,7 @@ Properties="Eigenschaften"
 MoveUp="Nach oben bewegen"
 MoveDown="Nach unten bewegen"
 Settings="Einstellungen"
+Display="Anzeige"
 Name="Name"
 Exit="Beenden"
 Mixer="Mixer"
@@ -26,6 +27,11 @@ Browse="Durchsuchen"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Verworfene Frames %1 (%2%)"
+PreviewProjector="Vollbild-Projektor (Vorschau)"
+SceneProjector="Vollbild-Projektor (Szene)"
+SourceProjector="Vollbild-Projektor (Quelle)"
+Clear="Leeren"
+Reset="Zurücksetzen"
 
 NameExists.Title="Name existiert bereits"
 NameExists.Text="Name wird bereits verwendet."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Szene"
 Basic.DisplayCapture="Monitoraufnahme"
 
+Basic.Main.PreviewConextMenu.Enable="Vorschau aktivieren"
+
 Basic.Main.AddSceneDlg.Title="Szene hinzufügen"
 Basic.Main.AddSceneDlg.Text="Bitte geben Sie einen Namen für die Szene ein"
 
 Basic.Main.DefaultSceneName.Text="Szene %1"
+
+Basic.Main.PreviewDisabled="Vorschau ist derzeit deaktiviert"
 
 Basic.SourceSelect="Quelle erstellen/auswählen"
 Basic.SourceSelect.CreateNew="Neu erstellen"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Benutze Streamencoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Häufige Aufnahmeformate"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alle Dateien"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Dateipfad oder URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video-Encoder (leer = Standard)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Container-Format"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Standardformat"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Container-Formatbeschreibung"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio- / Videocodec wird aus Dateipfad oder URL erraten."
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Standard-Encoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Encoder deaktivieren"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video-Encoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder-Einstellungen (falls gewünscht)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio-Encoder (leer = Standard)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio-Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder-Einstellungen (falls gewünscht)"
 
 Basic.Settings.Video="Video"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Desktop Audiogerät 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/Externes Audiogerät"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Externes Audiogerät 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Externes Audiogerät 3"
+Basic.Settings.Audio.EnablePushToMute="Push-To-Mute aktivieren"
+Basic.Settings.Audio.PushToMuteDelay="Push-To-Mute Verzögerung"
+Basic.Settings.Audio.EnablePushToTalk="Push-To-Talk aktivieren"
+Basic.Settings.Audio.PushToTalkDelay="Push-To-Talk Verzögerung"
 
 Basic.Settings.Advanced="Erweitert"
+Basic.Settings.Advanced.FormatWarning="Warnung: Andere Farbformate als NV12 sind in erster Linie für die Aufnahme bestimmt und sind für Streaming nicht zu empfehlen. Die erforderliche Farbformatkonvertierung kann eine erhöhte CPU-Auslastung hervorrufen."
 Basic.Settings.Advanced.Audio.BufferingTime="Audio Pufferungszeit"
 Basic.Settings.Advanced.Video.ColorFormat="Farbformat"
 Basic.Settings.Advanced.Video.ColorSpace="YUV-Farbraum"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Heruntermischen zu Mono"
 Basic.AdvAudio.Panning="Schwenken"
 Basic.AdvAudio.SyncOffset="Sync Verschiebung (ms)"
 Basic.AdvAudio.AudioTracks="Spuren"
+
+Basic.Settings.Hotkeys="Hotkeys"
+Basic.Settings.Hotkeys.Pair="Mit '%1' geteilte Tastenkombinationen funktionieren als Schalter"
+
+Basic.Hotkeys.StartStreaming="Streaming starten"
+Basic.Hotkeys.StopStreaming="Streaming stoppen"
+Basic.Hotkeys.StartRecording="Aufnahme starten"
+Basic.Hotkeys.StopRecording="Aufnahme stoppen"
+Basic.Hotkeys.SelectScene="Zu Szene wechseln"
+
+Hotkeys.Insert="Einfügen"
+Hotkeys.Delete="Entfernen"
+Hotkeys.Home="Pos1"
+Hotkeys.End="Ende"
+Hotkeys.PageUp="Bild-auf"
+Hotkeys.PageDown="Bild-ab"
+Hotkeys.NumLock="Num-Taste"
+Hotkeys.ScrollLock="Rollen-Taste"
+Hotkeys.CapsLock="Feststelltaste"
+Hotkeys.Backspace="Rücktaste"
+Hotkeys.Tab="Tabulator"
+Hotkeys.Print="Drucken"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Pfeiltaste Links"
+Hotkeys.Right="Pfeiltaste Rechts"
+Hotkeys.Up="Pfeiltaste Hoch"
+Hotkeys.Down="Pfeiltaste Runter"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menü"
+Hotkeys.Space="Leertaste"
+Hotkeys.NumpadNum="Numpad %1"
+Hotkeys.NumpadMultiply="Numpad Multiplizieren"
+Hotkeys.NumpadDivide="Numpad Dividieren"
+Hotkeys.NumpadAdd="Numpad Addieren"
+Hotkeys.NumpadSubtract="Numpad Subtrahieren"
+Hotkeys.NumpadDecimal="Numpad Komma"
+Hotkeys.AppleKeypadNum="%1 (Tastatur)"
+Hotkeys.AppleKeypadMultiply="* (Tastatur)"
+Hotkeys.AppleKeypadDivide="/ (Tastatur)"
+Hotkeys.AppleKeypadAdd="+ (Tastatur)"
+Hotkeys.AppleKeypadSubtract="- (Tastatur)"
+Hotkeys.AppleKeypadDecimal=". (Tastatur)"
+Hotkeys.AppleKeypadEqual="= (Tastatur)"
+Hotkeys.MouseButton="Maus %1"
+
+Mute="Stumm"
+Unmute="Stumm aus"
+Push-to-mute="Push-To-Mute"
+Push-to-talk="Push-To-Talk"
 
