--- a/obs/data/locale/el-GR.ini
+++ b/obs/data/locale/el-GR.ini
@@ -5,6 +5,7 @@ Region="Ελλάδα"
 OK="ΟΚ"
 Apply="Εφαρμογή"
 Cancel="Ακύρωση"
+Close="Κλείσιμο"
 Save="Αποθήκευση"
 Discard="Απόρριψη"
 Yes="Ναι"
@@ -12,11 +13,13 @@ No="Όχι"
 Add="Προσθήκη"
 Remove="Αφαίρεση"
 Rename="Μετονομασία"
+Interact="Αλληλεπίδραση"
 Filters="Φίλτρα"
 Properties="Ιδιότητες"
 MoveUp="Μετακίνηση Πάνω"
 MoveDown="Μετακίνηση Κάτω"
 Settings="Ρυθμίσεις"
+Display="Οθόνη"
 Name="Όνομα"
 Exit="Έξοδος"
 Mixer="Μίξερ"
@@ -24,6 +27,9 @@ Browse="Αναζήτηση"
 Mono="Μονοφωνικό"
 Stereo="Στερεοφωνικό"
 DroppedFrames="Διακεκομμένα καρέ %1 (%2%)"
+PreviewProjector="Προβολέας Πλήρους Οθόνης (Προεπισκόπηση)"
+SceneProjector="Προβολέας Πλήρους Οθόνης (Σκηνή)"
+SourceProjector="Προβολέας Πλήρους Οθόνης (Πηγή)"
 
 NameExists.Title="Το όνομα υπάρχει ήδη"
 NameExists.Text="Το όνομα χρησιμοποιείται ήδη."
@@ -84,10 +90,14 @@ Basic.AuxDevice4="Μικρόφωνο/Aux 4"
 Basic.Scene="Σκηνή"
 Basic.DisplayCapture="Σύλληψη Οθόνης"
 
+Basic.Main.PreviewConextMenu.Enable="Ενεργοποίηση Προεπισκόπησης"
+
 Basic.Main.AddSceneDlg.Title="Προσθήκη Σκηνής"
 Basic.Main.AddSceneDlg.Text="Παρακαλώ εισάγετε το όνομα της σκηνής"
 
 Basic.Main.DefaultSceneName.Text="Σκηνή %1"
+
+Basic.Main.PreviewDisabled="Η προεπισκόπηση είναι απενεργοποιημένη"
 
 Basic.SourceSelect="Δημιουργία/Επιλογή Πηγής"
 Basic.SourceSelect.CreateNew="Δημιουργία νέων"
@@ -239,9 +249,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Χρήση κωδικοπ
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Κοινή μορφές εγγραφής"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Όλα τα αρχεία"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Διαδρομή αρχείου ή URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Κωδικοποιητής Βίντεο (κενό=προεπιλογή)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Μορφή Περιέκτη"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Ήχος"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Βίντεο"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Προεπιλεγμένη Μορφή"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Περιγραφή Περιέκτη Μορφής"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Codec Ήχου/Βίντεο μαντεύθηκε από τη Διαδρομή Αρχείου ή το URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Προεπιλεγμένος Κωδικοποιητής"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Απενεργοποίηση Κωδικοποιητή"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Κωδικοποιητής Βίντεο"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Ρυθμίσεις Κωδικοποιητή Βίντεο (αν υπάρχουν)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Κωδικοποιητής Ήχου (κενό=προεπιλογή)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Κωδικοποιητής Ήχου"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Ρυθμίσεις Κωδικοποιητή Ήχου (αν υπάρχουν)"
 
 Basic.Settings.Video="Βίντεο"
@@ -274,6 +292,7 @@ Basic.Settings.Audio.AuxDevice2="Μικρόφωνο/Αuxillary Συσκευή Ή
 Basic.Settings.Audio.AuxDevice3="Μικρόφωνο/Αuxillary Συσκευή Ήχου 3"
 
 Basic.Settings.Advanced="Σύνθετες επιλογές"
+Basic.Settings.Advanced.FormatWarning="Προσοχή: Μορφές χρώματος εκτός του NV12 προορίζονται κυρίως για καταγραφή, και δεν συνιστώνται κατά τη μετάδοση. Ενδέχεται να υπάρξει αυξημένη χρήση της CPU λόγω μετατροπής μορφής χρώματος."
 Basic.Settings.Advanced.Audio.BufferingTime="Χρόνος buffering ήχου"
 Basic.Settings.Advanced.Video.ColorFormat="Μορφή Χρώματος"
 Basic.Settings.Advanced.Video.ColorRange.Partial="Μερικό"
@@ -286,4 +305,8 @@ Basic.AdvAudio.Mono="Αποκωδικοποίηση σε Mono"
 Basic.AdvAudio.Panning="Πανοραμικό"
 Basic.AdvAudio.SyncOffset="Μετατόπιση Συγχρονισμού (ms)"
 Basic.AdvAudio.AudioTracks="Κομμάτια"
+
+
+
+
 
