--- a/obs/data/locale/es-ES.ini
+++ b/obs/data/locale/es-ES.ini
@@ -1,10 +1,11 @@
 
-Language="español"
+Language="Español"
 Region="España, América Latina"
 
 OK="Aceptar"
 Apply="Aplicar"
 Cancel="Cancelar"
+Close="Cerrar"
 Save="Grabar"
 Discard="Descartar"
 Yes="Sí"
@@ -12,10 +13,13 @@ No="No"
 Add="Agregar"
 Remove="Quitar"
 Rename="Renombrar"
+Interact="Interactuar"
+Filters="Filtros"
 Properties="Propiedades"
 MoveUp="Mover arriba"
 MoveDown="Mover abajo"
 Settings="Configuración"
+Display="Pantalla"
 Name="Nombre"
 Exit="Salir"
 Mixer="Mezclador"
@@ -23,6 +27,9 @@ Browse="Examinar"
 Mono="Mono"
 Stereo="Estéreo"
 DroppedFrames="Fotogramas Perdidos %1 (%2%)"
+PreviewProjector="Proyector de pantalla completa (Previsualización)"
+SceneProjector="Proyector de pantalla completa (escena)"
+SourceProjector="Proyector de pantalla completa (fuente)"
 
 NameExists.Title="Ese nombre ya existe"
 NameExists.Text="Este nombre ya está en uso."
@@ -83,10 +90,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Escena"
 Basic.DisplayCapture="Captura de pantalla"
 
+Basic.Main.PreviewConextMenu.Enable="Habilitar previsualización"
+
 Basic.Main.AddSceneDlg.Title="Añadir escena"
 Basic.Main.AddSceneDlg.Text="Por favor, introduzca el nombre de la escena"
 
 Basic.Main.DefaultSceneName.Text="Escena %1"
+
+Basic.Main.PreviewDisabled="Vista previa desactivada"
 
 Basic.SourceSelect="Crear/seleccionar fuente"
 Basic.SourceSelect.CreateNew="Crear un nuevo"
@@ -105,6 +116,13 @@ Basic.InteractionWindow="Interactuando con '%1'"
 Basic.StatusBar.Reconnecting="Desconectado, reconectar (intento %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconexión exitosa"
 
+Basic.Filters="Filtros"
+Basic.Filters.AsyncFilters="Filtros de audio/vídeo"
+Basic.Filters.AudioFilters="Filtros de audio"
+Basic.Filters.EffectFilters="Filtros de efecto"
+Basic.Filters.Title="Filtros para '%1'"
+Basic.Filters.AddFilter.Title="Nombre del filtro"
+Basic.Filters.AddFilter.Text="Por favor especifique el nombre del filtro"
 
 Basic.TransformWindow="Ajustes de escena"
 Basic.TransformWindow.Position="Posición"
@@ -231,9 +249,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Usar flujo del codificado
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Formatos comunes de grabación"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Todos los Archivos"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Ruta de archivo o URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificador de vídeo (en blanco = default)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Formato del contenedor"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Formato predeterminado"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Descripción del formato contenedor"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Codec de audio/vídeo supuesto a partir de la URL o ruta de archivo"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Codificador por defecto"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Desactivar el codificador"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificador de vídeo"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Configuración de codificador de vídeo (si existe)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Codificador de audio (en blanco = por defecto)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Codificador de audio"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Configuración de codificador de vídeo (si existe)"
 
 Basic.Settings.Video="Vídeo"
@@ -266,6 +292,7 @@ Basic.Settings.Audio.AuxDevice2="Dispositivo de audio Mic/auxiliar 2"
 Basic.Settings.Audio.AuxDevice3="Dispositivo de audio Mic/auxiliar 3"
 
 Basic.Settings.Advanced="Avanzado"
+Basic.Settings.Advanced.FormatWarning="ADVERTENCIA: Formatos de Color que no sean NV12 están diseñados principalmente para la grabación y no se recomiendan al retransmitir.  La retransmisión puede incurrir en mayor uso de la CPU debido a la conversión de formato de color."
 Basic.Settings.Advanced.Audio.BufferingTime="Tiempo de búfer de audio"
 Basic.Settings.Advanced.Video.ColorFormat="Formato de color"
 Basic.Settings.Advanced.Video.ColorSpace="Espacio de color YUV"
@@ -280,4 +307,8 @@ Basic.AdvAudio.Mono="Remezclar a Mono"
 Basic.AdvAudio.Panning="Panorámica"
 Basic.AdvAudio.SyncOffset="Sincronización Offset (ms)"
 Basic.AdvAudio.AudioTracks="Pistas"
+
+
+
+
 
