--- a/obs/data/locale/eu-ES.ini
+++ b/obs/data/locale/eu-ES.ini
@@ -19,6 +19,7 @@ Properties="Ezaugarriak"
 MoveUp="Mugitu Gora"
 MoveDown="Mugitu Behera"
 Settings="Ezarpenak..."
+Display="Erakusleihoa"
 Name="Izena"
 Exit="Irten"
 Mixer="Nahastzailea"
@@ -26,6 +27,11 @@ Browse="Bilatu..."
 Mono="Monoa"
 Stereo="Estereoa"
 DroppedFrames="Eroritako Frameak %1 (%2%)"
+PreviewProjector="Ikusleiho-osoko Proiektorea (Aurreikuspena)"
+SceneProjector="Ikusleiho-osoko Proiektorea (Agerraldia)"
+SourceProjector="Ikusleiho-osoko Proiektorea (Iturburua)"
+Clear="Garbitu"
+Reset="Berrezarri"
 
 NameExists.Title="Izena badago jadanik"
 NameExists.Text="Izena jadanik erabilia da."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mik/Osag 4"
 Basic.Scene="Agerraldia"
 Basic.DisplayCapture="Erakusleiho Harpena"
 
+Basic.Main.PreviewConextMenu.Enable="Gaitu aurreikuspena"
+
 Basic.Main.AddSceneDlg.Title="Gehitu Agerraldia"
 Basic.Main.AddSceneDlg.Text="Mesedez sartu agerraldiaren izena"
 
 Basic.Main.DefaultSceneName.Text="%1 agerraldia"
+
+Basic.Main.PreviewDisabled="Aurreikuspena ezgaituta dago"
 
 Basic.SourceSelect="Sortu/Hautatu Iturburua"
 Basic.SourceSelect.CreateNew="Sortu berria"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Erabili jario kodeatzaile
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Grabaketa heuskarri arruntak"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Agiri Guztiak"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Agiri helburua edo URL-a"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Bideo Kodeatzailea (hutsik=berezkoa)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Edukiontzi Heuskarria"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audioa"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Bideoa"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Berezko Heuskarria"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Edukiontzi Heuskarri Azalpena"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio/Bideo Kodeka Agiri helburutik edo URL-tik igarria"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Berezko Kodeatzailea"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Ezgaitu Kodeatzailea"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Bideo Kodeatzailea"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Bideo Kodeatzaile Ezarpenak (egonez gero)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Kodeatzailea (hutsik=berezkoa)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Kodeatzailea"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Kodeatzaile Ezarpenak (egonez gero)"
 
 Basic.Settings.Video="Bideoa"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Mahaigaineko Audio Gailua 2"
 Basic.Settings.Audio.AuxDevice="Mik/Osagarri Audio Gailua"
 Basic.Settings.Audio.AuxDevice2="Mik/Osagarri Audio Gailua 2"
 Basic.Settings.Audio.AuxDevice3="Mik/Osagarri Audio Gailua 3"
+Basic.Settings.Audio.EnablePushToMute="Gaitu Sakatu-mututzeko"
+Basic.Settings.Audio.PushToMuteDelay="Sakatu-mututzeko atzerapena"
+Basic.Settings.Audio.EnablePushToTalk="Gaitu Sakatu-hitz-egiteko"
+Basic.Settings.Audio.PushToTalkDelay="Sakatu-hitz-egiteko atzerapena"
 
 Basic.Settings.Advanced="Aurreratua"
+Basic.Settings.Advanced.FormatWarning="Kontuz: NV12 ez diren margo heuskarriak grabaketarako dira gehienbat, eta ez daude gomendatutarik jariorako. Jarioak CPU erabilpena handitu dezake margo heuskarri bihurketa dela-eta."
 Basic.Settings.Advanced.Audio.BufferingTime="Audio Buffer Denbora"
 Basic.Settings.Advanced.Video.ColorFormat="Margo Heuskarria"
 Basic.Settings.Advanced.Video.ColorSpace="YUV Margo Tartea"
@@ -290,4 +313,52 @@ Basic.AdvAudio.Mono="Behera-nahastu Monora"
 Basic.AdvAudio.Panning="Panoramika"
 Basic.AdvAudio.SyncOffset="Aldiberetze Oreka (sm)"
 Basic.AdvAudio.AudioTracks="Bideak"
+
+Basic.Settings.Hotkeys="Lasterteklak"
+Basic.Settings.Hotkeys.Pair="'%1'-rekin elkarbanatutako tekla konbinazioak aldatzaile bezala ekiten dute"
+
+Basic.Hotkeys.StartStreaming="Hasi Jarioa"
+Basic.Hotkeys.StopStreaming="Gelditu Jarioa"
+Basic.Hotkeys.StartRecording="Hasi Grabaketa"
+Basic.Hotkeys.StopRecording="Gelditu Grabaketa"
+Basic.Hotkeys.SelectScene="Aldatu agerraldira"
+
+Hotkeys.Insert="Txertatu"
+Hotkeys.Delete="Ezabatu"
+Hotkeys.Home="Hasiera"
+Hotkeys.End="Amaiera"
+Hotkeys.PageUp="Orrialdean Gora"
+Hotkeys.PageDown="Orrialdean Behera"
+Hotkeys.NumLock="Zbk. Blokeoa"
+Hotkeys.ScrollLock="Irristari Blokeoa"
+Hotkeys.CapsLock="Hizki-larri Blokeoa"
+Hotkeys.Backspace="Atzera"
+Hotkeys.Tab="Tabulazioa"
+Hotkeys.Print="Irarkitu"
+Hotkeys.Pause="Pausatu"
+Hotkeys.Left="Ezker"
+Hotkeys.Right="Eskuin"
+Hotkeys.Up="Gora"
+Hotkeys.Down="Behera"
+Hotkeys.Menu="Menua"
+Hotkeys.Space="Tartea"
+Hotkeys.NumpadNum="Zbk-panela %1"
+Hotkeys.NumpadMultiply="Zbk-panela Biderkatu"
+Hotkeys.NumpadDivide="Zbk-panela Zatitu"
+Hotkeys.NumpadAdd="Zbk-panela Gehitu"
+Hotkeys.NumpadSubtract="Zbk-panela Kendu"
+Hotkeys.NumpadDecimal="Zbk-panela Hamarrena"
+Hotkeys.AppleKeypadNum="%1 (Zbk-panela)"
+Hotkeys.AppleKeypadMultiply="* (Zbk-panela)"
+Hotkeys.AppleKeypadDivide="/ (Zbk-panela)"
+Hotkeys.AppleKeypadAdd="+ (Zbk-panela)"
+Hotkeys.AppleKeypadSubtract="- (Zbk-panela)"
+Hotkeys.AppleKeypadDecimal=". (Zbk-panela)"
+Hotkeys.AppleKeypadEqual="= (Zbk-panela)"
+Hotkeys.MouseButton="Sagua %1"
+
+Mute="Mututu"
+Unmute="Desmututu"
+Push-to-mute="Sakatu-mututzeko"
+Push-to-talk="Sakatu-hitz-egiteko"
 
