--- a/obs/data/locale/fi-FI.ini
+++ b/obs/data/locale/fi-FI.ini
@@ -5,6 +5,7 @@ Region="Suomi"
 OK="OK"
 Apply="Käytä"
 Cancel="Peruuta"
+Close="Sulje"
 Save="Tallenna"
 Discard="Hylkää"
 Yes="Kyllä"
@@ -12,10 +13,13 @@ No="Ei"
 Add="Lisää"
 Remove="Poista"
 Rename="Uudelleennimeä"
+Interact="Vuorovaikuta"
+Filters="Suodattimet"
 Properties="Ominaisuudet"
 MoveUp="Siirrä ylös"
 MoveDown="Siirrä alas"
 Settings="Asetukset"
+Display="Monitori"
 Name="Nimi"
 Exit="Poistu"
 Mixer="Mikseri"
@@ -23,6 +27,9 @@ Browse="Selaa"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Pudotettuja frameja %1 (%2%)"
+PreviewProjector="Heijasta monitoriin (Esikatselu)"
+SceneProjector="Heijasta monitoriin (Skene)"
+SourceProjector="Heijasta monitoriin (Lähde)"
 
 NameExists.Title="Nimi on jo olemassa"
 NameExists.Text="Nimi on jo käytössä."
@@ -59,17 +66,17 @@ LicenseAgreement.Exit="Sulje"
 
 Remux.SourceFile="OBS-tallenne"
 Remux.TargetFile="Kohdetiedosto"
-Remux.Remux="Remux"
+Remux.Remux="Muunna"
 Remux.RecordingPattern="OBS-tallenne (*.flv)"
-Remux.FinishedTitle="Remuxaus on valmistunut"
-Remux.Finished="Tallenne remuxattu"
-Remux.FinishedError="Tallenne on remuxattu, mutta tiedosto saattaa olla keskeneräinen"
+Remux.FinishedTitle="Muunto on valmistunut"
+Remux.Finished="Tallenne muunnettu"
+Remux.FinishedError="Tallenne on muunnettu, mutta tiedosto saattaa olla keskeneräinen"
 Remux.SelectRecording="Valitse OBS-tallenne …"
 Remux.SelectTarget="Valitse kohdetiedosto ..."
 Remux.FileExistsTitle="Kohdetiedosto on jo olemassa"
 Remux.FileExists="Kohdetiedosto on jo olemassa, haluatko korvata sen?"
-Remux.ExitUnfinishedTitle="Remuxaus käynnissä"
-Remux.ExitUnfinished="Remuxaus ei ole valmis. Jos keskeytät nyt, kohdetiedostosta saattaa tulla käyttökelvoton.\nHaluatko varmasti pysäyttää remuxauksen?"
+Remux.ExitUnfinishedTitle="Muunto on käynnissä"
+Remux.ExitUnfinished="Muunto ei ole valmis. Jos keskeytät nyt, kohdetiedostosta saattaa tulla käyttökelvoton.\nHaluatko varmasti pysäyttää remuxauksen?"
 
 UpdateAvailable="Uusi päivitys saatavilla"
 UpdateAvailable.Text="Versio %1.%2.%3 on nyt saatavilla. <a href='%4'>Lataa tästä</a>"
@@ -82,12 +89,16 @@ Basic.AuxDevice3="Mic/Aux 3"
 Basic.AuxDevice4="Mic/Aux 4"
 
 Basic.Scene="Skene"
-Basic.DisplayCapture="Display Capture"
+Basic.DisplayCapture="Kaappaa monitori"
+
+Basic.Main.PreviewConextMenu.Enable="Näytä esikatselu"
 
 Basic.Main.AddSceneDlg.Title="Lisää skene"
 Basic.Main.AddSceneDlg.Text="Aseta skenen nimi"
 
 Basic.Main.DefaultSceneName.Text="Skene %1"
+
+Basic.Main.PreviewDisabled="Esikatselu on poistettu käytöstä"
 
 Basic.SourceSelect="Luo/Valitse lähde"
 Basic.SourceSelect.CreateNew="Luo uusi"
@@ -106,6 +117,13 @@ Basic.InteractionWindow="Vuorovaikutetaan '%1' kanssa"
 Basic.StatusBar.Reconnecting="Yhteys katkaistu, yhdistetään uudelleen (yritys %1)"
 Basic.StatusBar.ReconnectSuccessful="Uudelleenyhdistys onnistui"
 
+Basic.Filters="Suodattimet"
+Basic.Filters.AsyncFilters="Ääni/kuva -suodattimet"
+Basic.Filters.AudioFilters="Äänisuodattimet"
+Basic.Filters.EffectFilters="Efektisuodattimet"
+Basic.Filters.Title="Suodattimet '%1':lle"
+Basic.Filters.AddFilter.Title="Suodattimen nimi"
+Basic.Filters.AddFilter.Text="Määritä suodattimelle nimi"
 
 Basic.TransformWindow="Skenen lähteen muuntaminen"
 Basic.TransformWindow.Position="Sijainti"
@@ -149,7 +167,7 @@ Basic.MainMenu.File="&Tiedosto"
 Basic.MainMenu.File.Export="&Vie"
 Basic.MainMenu.File.Import="T&uo"
 Basic.MainMenu.File.ShowRecordings="Näytä &tallennukset"
-Basic.MainMenu.File.Remux="Rem&uxaa tallenne"
+Basic.MainMenu.File.Remux="Mu&unna tallenne"
 Basic.MainMenu.File.Settings="&Asetukset"
 Basic.MainMenu.File.Exit="&Sulje"
 
@@ -232,9 +250,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Käytä lähetysenkooderi
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Yleiset tallennusmuodot"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Kaikki tiedostot"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Tiedostopolku tai URL-osoite"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video-enkooderi (tyhjä = oletus)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Säiliömuoto"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Ääni"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Kuva"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Oletusmuoto"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Säiliömuodon kuvaus"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Ääni/Kuva koodekki arvataan tiedostopäätteen tai osoitteen perusteella"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Oletus"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Poista enkooderi käytöstä"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videoenkooderi"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video-enkooderin asetukset"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Ääni-enkooderi (tyhjä = oletus)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Äänienkooderi"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Ääni-enkooderin asetukset"
 
 Basic.Settings.Video="Kuva"
@@ -267,6 +293,7 @@ Basic.Settings.Audio.AuxDevice2="Mic/Aux -äänilaite 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Aux -äänilaite 3"
 
 Basic.Settings.Advanced="Lisäasetukset"
+Basic.Settings.Advanced.FormatWarning="Varoitus: Muut väriformaatit kuin NV12, ovat tarkoitettuja tallentamiseen eikä niitä suositella lähetyksiin. Lähetykset saattavat johtaa suurempaan CPU:n kulutukseen väriformaatin muutoksen vuoksi."
 Basic.Settings.Advanced.Audio.BufferingTime="Äänen puskurointiaika"
 Basic.Settings.Advanced.Video.ColorFormat="Värimuoto"
 Basic.Settings.Advanced.Video.ColorSpace="YUV väriavaruus"
@@ -281,4 +308,8 @@ Basic.AdvAudio.Mono="Miksaa yksikanavaiseksi"
 Basic.AdvAudio.Panning="Balanssi"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Raidat"
+
+
+
+
 
