--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -19,6 +19,7 @@ Properties="Propriétés"
 MoveUp="Déplacer vers le haut"
 MoveDown="Déplacer vers le bas"
 Settings="Paramètres"
+Display="Affichage"
 Name="Nom"
 Exit="Quitter OBS"
 Mixer="Table de mixage"
@@ -26,6 +27,11 @@ Browse="Parcourir"
 Mono="Mono"
 Stereo="Stéréo"
 DroppedFrames="Images Perdues %1 (%2%)"
+PreviewProjector="Projecteur plein écran (aperçu)"
+SceneProjector="Projecteur plein écran (scène)"
+SourceProjector="Projecteur plein écran (source)"
+Clear="Effacer"
+Reset="Réinitialiser"
 
 NameExists.Title="Ce nom existe déjà"
 NameExists.Text="Ce nom est déjà utilisé."
@@ -49,7 +55,7 @@ Output.ConnectFail.Disconnected="Déconnecté du serveur."
 Output.BadPath.Title="Chemin d'accès au fichier incorrect"
 Output.BadPath.Text="Le chemin configuré pour le flux sortant est invalide. Veuillez vérifier vos paramètres pour confirmer la présence d'un chemin valide."
 
-LogReturnDialog="Mise en Ligne du Journal Réussi"
+LogReturnDialog="Mise en ligne du journal réussie"
 LogReturnDialog.CopyURL="Copier l'adresse"
 LogReturnDialog.ErrorUploadingLog="Échec de la mise en ligne du journal"
 
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Scène"
 Basic.DisplayCapture="Afficher la capture"
 
+Basic.Main.PreviewConextMenu.Enable="Activer l'aperçu"
+
 Basic.Main.AddSceneDlg.Title="Ajouter une scène"
 Basic.Main.AddSceneDlg.Text="Veuillez entrer le nom de la scène"
 
 Basic.Main.DefaultSceneName.Text="Scène %1"
+
+Basic.Main.PreviewDisabled="L'aperçu est actuellement désactivé"
 
 Basic.SourceSelect="Créer/Sélectionner la source"
 Basic.SourceSelect.CreateNew="Créer une nouvelle source"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Utiliser l'encodeur de fl
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Formats d'enregistrement courants"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Tous les fichiers"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Chemin d'accès ou URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Encodeur vidéo (vide = par défaut)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Format de conteneur"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Vidéo"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Format par défaut"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Description du format de conteneur"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Codec audio/vidéo deviné à partir du chemin d'accès ou de l'URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Encodeur par défaut"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Désactiver l'encodeur"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Encodeur vidéo"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Paramètres de l'encodeur vidéo (le cas échéant)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Encodeur audio (blanc = par défaut)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Encodeur audio"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Paramètres de l'encodeur audio (le cas échéant)"
 
 Basic.Settings.Video="Vidéo"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Périphérique audio du bureau 2"
 Basic.Settings.Audio.AuxDevice="Périphérique audio micro/auxiliaire"
 Basic.Settings.Audio.AuxDevice2="Périphérique audio micro/auxiliaire 2"
 Basic.Settings.Audio.AuxDevice3="Périphérique audio micro/auxiliaire 3"
+Basic.Settings.Audio.EnablePushToMute="Activer le Push-to-mute"
+Basic.Settings.Audio.PushToMuteDelay="Délai du Push-to-mute"
+Basic.Settings.Audio.EnablePushToTalk="Activer le Push-to-talk"
+Basic.Settings.Audio.PushToTalkDelay="Délai du Push-to-talk"
 
 Basic.Settings.Advanced="Avancé"
+Basic.Settings.Advanced.FormatWarning="Attention : les formats de couleur autres que NV12 sont principalement destinés à l'enregistrement, et ne sont pas recommandés pour le streaming. Le streaming peut pâtir d'une utilisation élevée du CPU due à la conversion de format de couleur."
 Basic.Settings.Advanced.Audio.BufferingTime="Temps de mise en mémoire tampon audio"
 Basic.Settings.Advanced.Video.ColorFormat="Format de couleur"
 Basic.Settings.Advanced.Video.ColorSpace="Espace de couleur YUV"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Passer en mono"
 Basic.AdvAudio.Panning="Panoramique polyphonique"
 Basic.AdvAudio.SyncOffset="Décalage de la synchronisation (ms)"
 Basic.AdvAudio.AudioTracks="Pistes"
+
+Basic.Settings.Hotkeys="Raccourcis clavier"
+Basic.Settings.Hotkeys.Pair="Les combinaisons de touches partagées avec '%1' agissent comme déclancheur"
+
+Basic.Hotkeys.StartStreaming="Commencer le streaming"
+Basic.Hotkeys.StopStreaming="Arrêter le streaming"
+Basic.Hotkeys.StartRecording="Démarrer l'enregistrement"
+Basic.Hotkeys.StopRecording="Arrêter l'enregistrement"
+Basic.Hotkeys.SelectScene="Passer à la scène"
+
+Hotkeys.Insert="Insérer"
+Hotkeys.Delete="Supprimer"
+Hotkeys.Home="Début"
+Hotkeys.End="Fin"
+Hotkeys.PageUp="Page précédente"
+Hotkeys.PageDown="Page suivante"
+Hotkeys.NumLock="Verr Num"
+Hotkeys.ScrollLock="Arrêt défilement"
+Hotkeys.CapsLock="Verr Maj"
+Hotkeys.Backspace="Retour arrière"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Impression écran"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Gauche"
+Hotkeys.Right="Droite"
+Hotkeys.Up="Haut"
+Hotkeys.Down="Bas"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menu"
+Hotkeys.Space="Espace"
+Hotkeys.NumpadNum="Pavé numérique %1"
+Hotkeys.NumpadMultiply="Multiplication du pavé numérique"
+Hotkeys.NumpadDivide="Division du pavé numérique"
+Hotkeys.NumpadAdd="Addition du pavé numérique"
+Hotkeys.NumpadSubtract="Soustraction du pavé numérique"
+Hotkeys.NumpadDecimal="Virgule du pavé numérique"
+Hotkeys.AppleKeypadNum="%1 (Pavé numérique)"
+Hotkeys.AppleKeypadMultiply="* (Pavé numérique)"
+Hotkeys.AppleKeypadDivide="/ (Pavé numérique)"
+Hotkeys.AppleKeypadAdd="+ (Pavé numérique)"
+Hotkeys.AppleKeypadSubtract="- (Pavé numérique)"
+Hotkeys.AppleKeypadDecimal=". (Pavé numérique)"
+Hotkeys.AppleKeypadEqual="= (Pavé numérique)"
+Hotkeys.MouseButton="Souris %1"
+
+Mute="Rendre muet"
+Unmute="Rendre parlant"
+Push-to-mute="Push-to-mute"
+Push-to-talk="Push-to-talk"
 
