--- a/obs/data/locale/gl-ES.ini
+++ b/obs/data/locale/gl-ES.ini
@@ -13,11 +13,13 @@ No="Non"
 Add="Engadir"
 Remove="Eliminar"
 Rename="Renomear"
+Interact="Interactuar"
 Filters="Filtros"
 Properties="Propiedades"
 MoveUp="Subir"
 MoveDown="Baixar"
 Settings="Axustes"
+Display="Pantalla"
 Name="Nome"
 Exit="Saír"
 Mixer="Mesturador"
@@ -25,6 +27,10 @@ Browse="Explorar"
 Mono="Mono"
 Stereo="Estéreo"
 DroppedFrames="Fotogramas perdidos %1 (%2%)"
+PreviewProjector="Proxector de pantalla completa (vista previa)"
+SceneProjector="Proxector de pantalla completa (escena)"
+SourceProjector="Proxector de pantalla completa (fonte)"
+Reset="Restablecer"
 
 NameExists.Title="O nome xa existe"
 NameExists.Text="O nome xa está en uso."
@@ -85,10 +91,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Escena"
 Basic.DisplayCapture="Captura de pantalla"
 
+Basic.Main.PreviewConextMenu.Enable="Habilitar vista previa"
+
 Basic.Main.AddSceneDlg.Title="Engadir escena"
 Basic.Main.AddSceneDlg.Text="Por favor, insire un nome para a escena"
 
 Basic.Main.DefaultSceneName.Text="Escena %1"
+
+Basic.Main.PreviewDisabled="A vista previa está actualmente deshabilitada"
 
 Basic.SourceSelect="Crear/seleccionar fonte"
 Basic.SourceSelect.CreateNew="Crear nova"
@@ -110,6 +120,8 @@ Basic.StatusBar.ReconnectSuccessful="Reconexión satisfactoria"
 Basic.Filters="Filtros"
 Basic.Filters.AsyncFilters="Filtros de audio/vídeo"
 Basic.Filters.AudioFilters="Filtros de audio"
+Basic.Filters.EffectFilters="Filtros de efectos"
+Basic.Filters.Title="Filtros para '%1'"
 Basic.Filters.AddFilter.Title="Nome do filtro"
 Basic.Filters.AddFilter.Text="Especifica, por favor, o nome do filtro"
 
@@ -238,9 +250,16 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Utilizar fluxo do codific
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Formatos comúns de gravación"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Todos os ficheiros"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Camiño do ficheiro ou URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificador de vídeo (en branco = por defecto)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Formato do contedor"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Vídeo"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Formato predefinido"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Descrición do formato do contedor"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Codificador predefinido"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Desactivar codificador"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificador de vídeo"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Axustes do codificador de vídeo (se existe)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Codificador de audio (en branco = por defecto)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Codificador de audio"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Axustes do codificador de audio (se existe)"
 
 Basic.Settings.Video="Vídeo"
@@ -287,4 +306,18 @@ Basic.AdvAudio.Mono="Remesturar a mono"
 Basic.AdvAudio.Panning="Panorámica"
 Basic.AdvAudio.SyncOffset="Sincronización Offset (ms)"
 Basic.AdvAudio.AudioTracks="Pistas"
+
+
+Basic.Hotkeys.StartStreaming="Iniciar retransmisión"
+Basic.Hotkeys.StopStreaming="Deter retransmisión"
+Basic.Hotkeys.StartRecording="Iniciar gravación"
+Basic.Hotkeys.StopRecording="Deter gravación"
+
+Hotkeys.Insert="Inserir"
+Hotkeys.Delete="Eliminar"
+Hotkeys.Print="Imprimir"
+Hotkeys.Windows="Windows"
+Hotkeys.Menu="Menú"
+Hotkeys.Space="Espazo"
+
 
