--- a/obs/data/locale/hu-HU.ini
+++ b/obs/data/locale/hu-HU.ini
@@ -19,6 +19,7 @@ Properties="Tulajdonságok"
 MoveUp="Mozgatás Fel"
 MoveDown="Mozgatás Le"
 Settings="Beállítások"
+Display="Kijelző"
 Name="Név"
 Exit="Kilépés"
 Mixer="Keverő"
@@ -26,6 +27,11 @@ Browse="Tallózás"
 Mono="Mono"
 Stereo="Sztereó"
 DroppedFrames="Ejtett Képkockák: %1 (%2 %)"
+PreviewProjector="Teljes képernyős projektor (Előnézet)"
+SceneProjector="Teljes képernyős projektor (Jelenet)"
+SourceProjector="Teljes képernyős projektor (Forrás)"
+Clear="Törlés"
+Reset="Újraindít"
 
 NameExists.Title="A megadott név már létezik"
 NameExists.Text="A név már használatban van."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mikrofon/Aux 4"
 Basic.Scene="Jelenet"
 Basic.DisplayCapture="Képernyő Felvétel"
 
+Basic.Main.PreviewConextMenu.Enable="Előnézet bekapcsolása"
+
 Basic.Main.AddSceneDlg.Title="Jelenet Hozzáadása"
 Basic.Main.AddSceneDlg.Text="Kérem adja meg a jelenet nevét"
 
 Basic.Main.DefaultSceneName.Text="Jelenet %1"
+
+Basic.Main.PreviewDisabled="Előnézet jelenleg letiltva"
 
 Basic.SourceSelect="Forrás Létrehozása/Kijelölése"
 Basic.SourceSelect.CreateNew="Új Létrehozása"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Stream kódoló használa
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Általános felvételi formátumok"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Minden fájl"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Fájl elérési útja vagy URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videó Kódoló (üres = alapértelmezett)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Tároló Formátum"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Hang"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Videó"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Alapértelmezett Formátum"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Tároló Formátum Leírás"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audió/Videó Kodek kitalálása a fájl elérési útból vagy URL-ből"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Alapértelmezett Kódoló"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Kódoló Letiltása"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videó Kódoló"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Videó Kódoló Beállítások (ha van)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Kódoló (üres = alapértelmezett)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Kódoló"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Kódoló Beállítások (ha van)"
 
 Basic.Settings.Video="Videó"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Asztali hangeszköz 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/Aux Audio eszköz"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Aux Audio eszköz 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Aux Audio eszköz 3"
+Basic.Settings.Audio.EnablePushToMute="Push-to-mute engedélyezése"
+Basic.Settings.Audio.PushToMuteDelay="Push-to-mute késleltetés"
+Basic.Settings.Audio.EnablePushToTalk="Push-to-talk engedélyezése"
+Basic.Settings.Audio.PushToTalkDelay="Push-to-talk késleltetés"
 
 Basic.Settings.Advanced="Haladó"
+Basic.Settings.Advanced.FormatWarning="Figyelem: Az NV12-től eltérő színformátumok elsősorban felvételhez vannak és nem ajánlott a használatuk streamekhez. Adás közben megnövekedett processzor igényt okozhat a színkonverzió."
 Basic.Settings.Advanced.Audio.BufferingTime="Audio pufferelési idő"
 Basic.Settings.Advanced.Video.ColorFormat="Színformátum"
 Basic.Settings.Advanced.Video.ColorSpace="YUV Színtér"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Monora lekeverés"
 Basic.AdvAudio.Panning="Keverő"
 Basic.AdvAudio.SyncOffset="Szinkron eltolás (ms)"
 Basic.AdvAudio.AudioTracks="Sávok"
+
+Basic.Settings.Hotkeys="Gyorsbillentyűk"
+Basic.Settings.Hotkeys.Pair="Azonos billentyűkombináció a '%1' mezővel, ezért kapcsolóként működik"
+
+Basic.Hotkeys.StartStreaming="Stream Indítása"
+Basic.Hotkeys.StopStreaming="Stream Leállítása"
+Basic.Hotkeys.StartRecording="Felvétel Indítása"
+Basic.Hotkeys.StopRecording="Felvétel Leállítása"
+Basic.Hotkeys.SelectScene="Jelenethez kapcsolás"
+
+Hotkeys.Insert="Beszúrás"
+Hotkeys.Delete="Törlés"
+Hotkeys.Home="Teteje"
+Hotkeys.End="Vége"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Nyomtatás"
+Hotkeys.Pause="Szünet"
+Hotkeys.Left="Balra"
+Hotkeys.Right="Jobbra"
+Hotkeys.Up="Fel"
+Hotkeys.Down="Le"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Szuper"
+Hotkeys.Menu="Menü"
+Hotkeys.Space="Hely"
+Hotkeys.NumpadNum="Numpad %1"
+Hotkeys.NumpadMultiply="Numerikus Szorzás"
+Hotkeys.NumpadDivide="Numerikus Osztás"
+Hotkeys.NumpadAdd="Numerikus Plusz"
+Hotkeys.NumpadSubtract="Numerikus Mínusz"
+Hotkeys.NumpadDecimal="Numerikus Pont"
+Hotkeys.AppleKeypadNum="%1 (Billentyűzet)"
+Hotkeys.AppleKeypadMultiply="* (Billentyűzet)"
+Hotkeys.AppleKeypadDivide="/ (Billentyűzet)"
+Hotkeys.AppleKeypadAdd="+ (Billentyűzet)"
+Hotkeys.AppleKeypadSubtract="- (Billentyűzet)"
+Hotkeys.AppleKeypadDecimal=". (Billentyűzet)"
+Hotkeys.AppleKeypadEqual="= (Billentyűzet)"
+Hotkeys.MouseButton="Egér %1"
+
+Mute="Némítás"
+Unmute="Némítás megszüntetése"
+Push-to-mute="Push-to-mute"
+Push-to-talk="Push-to-talk"
 
