--- a/obs/data/locale/it-IT.ini
+++ b/obs/data/locale/it-IT.ini
@@ -19,6 +19,7 @@ Properties="Proprietà"
 MoveUp="Sposta su"
 MoveDown="Sposta giù"
 Settings="Impostazioni"
+Display="Display"
 Name="Nome"
 Exit="Esci"
 Mixer="Mixer"
@@ -26,6 +27,11 @@ Browse="Sfoglia"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Fotogrammi persi %1 (%2%)"
+PreviewProjector="Proiettore Schermo intero (Anteprima)"
+SceneProjector="Proiettore Schermo intero (Scena)"
+SourceProjector="Proiettore Schermo intero (Sorgente)"
+Clear="Svuota"
+Reset="Reset"
 
 NameExists.Title="Il nome esiste già"
 NameExists.Text="Il nome è già in uso."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Scena"
 Basic.DisplayCapture="Mostra cattura"
 
+Basic.Main.PreviewConextMenu.Enable="Abilita Anteprima"
+
 Basic.Main.AddSceneDlg.Title="Aggiungi scena"
 Basic.Main.AddSceneDlg.Text="Inserisci il nome della scena"
 
 Basic.Main.DefaultSceneName.Text="Scena %1"
+
+Basic.Main.PreviewDisabled="L'anteprima è attualmente disattivata"
 
 Basic.SourceSelect="Crea/seleziona la sorgente"
 Basic.SourceSelect.CreateNew="Crea nuovo"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Utilizzare il codificator
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Comuni formati di registrazione"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Tutti i file"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Percorso del file o URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Codificatore video (vuoto = default)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Formato Contenitore"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Formato predefinito"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Descrizione Formato Contenitore"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Codec Audio/Video indovinato dal percorso del file o URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Encoder predefinito"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Encoder Disabilitato"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Encoder Video"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Impostazioni codifica video (se presente)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Codifica Audio (vuoto = default)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Encoder Audio"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Impostazioni codifica audio (se presente)"
 
 Basic.Settings.Video="Video"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Dispositivo audio desktop 2"
 Basic.Settings.Audio.AuxDevice="Dispositivo audio mic/ausiliario"
 Basic.Settings.Audio.AuxDevice2="Dispositivo audio mic/ausiliario 2"
 Basic.Settings.Audio.AuxDevice3="Dispositivo audio mic/ausiliario 3"
+Basic.Settings.Audio.EnablePushToMute="Abilita Push-to-mute"
+Basic.Settings.Audio.PushToMuteDelay="Ritardo Push-to-mute"
+Basic.Settings.Audio.EnablePushToTalk="Abilita Push-to-talk"
+Basic.Settings.Audio.PushToTalkDelay="Ritardo Push-to-talk"
 
 Basic.Settings.Advanced="Avanzate"
+Basic.Settings.Advanced.FormatWarning="Attenzione: I formati colore diversi da NV12 sono principalmente pensati per la registrazione, e non sono consigliati durante le dirette. Lo streaming può avere un utilizzo maggiore delle CPU a causa della conversione del formato del colore."
 Basic.Settings.Advanced.Audio.BufferingTime="Tempo di buffer audio"
 Basic.Settings.Advanced.Video.ColorFormat="Formato colore"
 Basic.Settings.Advanced.Video.ColorSpace="Spazio colore YUV"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Downmix to Mono"
 Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Tracce"
+
+Basic.Settings.Hotkeys="Tasti di scelta rapida"
+Basic.Settings.Hotkeys.Pair="La combinazione di chiavi condivisa con '%1' funziona da commutatore"
+
+Basic.Hotkeys.StartStreaming="Inizia diretta"
+Basic.Hotkeys.StopStreaming="Termina diretta"
+Basic.Hotkeys.StartRecording="Inizia registrazione"
+Basic.Hotkeys.StopRecording="Ferma registrazione"
+Basic.Hotkeys.SelectScene="Passa alla scena"
+
+Hotkeys.Insert="Ins"
+Hotkeys.Delete="Canc"
+Hotkeys.Home="Home"
+Hotkeys.End="Fine"
+Hotkeys.PageUp="Pagina sù"
+Hotkeys.PageDown="Pagina giù"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Stampa"
+Hotkeys.Pause="Pausa"
+Hotkeys.Left="Sinistra"
+Hotkeys.Right="Destra"
+Hotkeys.Up="Sù"
+Hotkeys.Down="Giù"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menù"
+Hotkeys.Space="Barra Spaziatrice"
+Hotkeys.NumpadNum="TastNum %1"
+Hotkeys.NumpadMultiply="Moltiplicatore TastNum"
+Hotkeys.NumpadDivide="TastNum Diviso"
+Hotkeys.NumpadAdd="TastNum Più"
+Hotkeys.NumpadSubtract="TastNum Meno"
+Hotkeys.NumpadDecimal="Decimale TastNum"
+Hotkeys.AppleKeypadNum="%1 (Tastiera)"
+Hotkeys.AppleKeypadMultiply="* (Tastiera)"
+Hotkeys.AppleKeypadDivide="/ (Tastiera)"
+Hotkeys.AppleKeypadAdd="+ (Tastiera)"
+Hotkeys.AppleKeypadSubtract="- (Tastiera)"
+Hotkeys.AppleKeypadDecimal=". (Tastiera)"
+Hotkeys.AppleKeypadEqual="= (Tastiera)"
+Hotkeys.MouseButton="Mouse %1"
+
+Mute="Silenzia"
+Unmute="Riattiva"
+Push-to-mute="Push-to-mute"
+Push-to-talk="Push-to-talk"
 
