--- a/obs/data/locale/nb-NO.ini
+++ b/obs/data/locale/nb-NO.ini
@@ -19,6 +19,7 @@ Properties="Egenskaper"
 MoveUp="Flytt opp"
 MoveDown="Flytt ned"
 Settings="Innstillinger"
+Display="Skjerm"
 Name="Navn"
 Exit="Avslutt"
 Mixer="Mikser"
@@ -26,6 +27,11 @@ Browse="Bla gjennom"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Bildetap %2% (%1)"
+PreviewProjector="Fullskjermprojektor (forhåndsvisning)"
+SceneProjector="Fullskjermprojektor (scene)"
+SourceProjector="Fullskjermprojektor (kilde)"
+Clear="Tøm"
+Reset="Tilbakestill"
 
 NameExists.Title="Navnet eksisterer allerede"
 NameExists.Text="Dette navnet er allerede i bruk."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mikrofon/Aux 4"
 Basic.Scene="Scene"
 Basic.DisplayCapture="Skjermopptak"
 
+Basic.Main.PreviewConextMenu.Enable="Aktiver forhåndsvisning"
+
 Basic.Main.AddSceneDlg.Title="Ny Scene"
 Basic.Main.AddSceneDlg.Text="Vennligst gi et navn til scenen."
 
 Basic.Main.DefaultSceneName.Text="Scene %1"
+
+Basic.Main.PreviewDisabled="Forhåndsvisning er deaktivert"
 
 Basic.SourceSelect="Opprett eller velg kilde"
 Basic.SourceSelect.CreateNew="Opprett"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Bruk strømkoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Vanlige opptaksformater"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alle filer"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Filbane eller URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videokoder (standard hvis uangitt)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Konteinerformat"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Lyd"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Standardformat"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Konteinerformatbeskrivelse"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Lyd- og videokodek gjettet fra filbane eller URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Standardkoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Deaktiver koder"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videokoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Videokoderinstillinger (hvis noen)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Lydkoder (standard hvis uangitt)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Lydkoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Lydkoderinstillinger (hvis noen)"
 
 Basic.Settings.Video="Bilde"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Skrivebordslyd 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/Aux"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Aux 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Aux 3"
+Basic.Settings.Audio.EnablePushToMute="Aktiver demp-ved-trykk"
+Basic.Settings.Audio.PushToMuteDelay="Demp-ved-trykk forsinkelse"
+Basic.Settings.Audio.EnablePushToTalk="Aktiver snakk-ved-trykk"
+Basic.Settings.Audio.PushToTalkDelay="Snakk-ved-trykk forsinkelse"
 
 Basic.Settings.Advanced="Avansert"
+Basic.Settings.Advanced.FormatWarning="Advarsel: Fargeformater andre enn NV12 er ment for opptak. Disse formatene anbefales ikke ved strømming, da det fører til økt prosessorbruk som følge av fargeformatkonvertering."
 Basic.Settings.Advanced.Audio.BufferingTime="Lydbuffertid"
 Basic.Settings.Advanced.Video.ColorFormat="Fargeformat"
 Basic.Settings.Advanced.Video.ColorSpace="YUV fargerom"
@@ -290,4 +313,29 @@ Basic.AdvAudio.Mono="Nedmiks til mono"
 Basic.AdvAudio.Panning="Panorering"
 Basic.AdvAudio.SyncOffset="Synkronerings forskyvning (ms)"
 Basic.AdvAudio.AudioTracks="Spor"
+
+Basic.Settings.Hotkeys="Hurtigtaster"
+
+Basic.Hotkeys.StartStreaming="Start strømming"
+Basic.Hotkeys.StopStreaming="Stopp strømming"
+Basic.Hotkeys.StartRecording="Start opptak"
+Basic.Hotkeys.StopRecording="Stopp opptak"
+Basic.Hotkeys.SelectScene="Bytt til scene"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Left"
+Hotkeys.Right="Right"
+
 
