--- a/obs/data/locale/nl-NL.ini
+++ b/obs/data/locale/nl-NL.ini
@@ -19,6 +19,7 @@ Properties="Eigenschappen"
 MoveUp="Omhoog Schuiven"
 MoveDown="Omlaag Schuiven"
 Settings="Instellingen"
+Display="Monitor"
 Name="Naam"
 Exit="Afsluiten"
 Mixer="Mixer"
@@ -26,6 +27,11 @@ Browse="Bladeren"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Gedropte Frames %1 (%2%)"
+PreviewProjector="Full-screen Projector (Preview)"
+SceneProjector="Full-screen Projector (Scène)"
+SourceProjector="Full-screen Projector (Bron)"
+Clear="Wissen"
+Reset="Herstellen"
 
 NameExists.Title="Naam bestaat al"
 NameExists.Text="De naam is al in gebruik."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Scène"
 Basic.DisplayCapture="Beeldschermcapture"
 
+Basic.Main.PreviewConextMenu.Enable="Preview inschakelen"
+
 Basic.Main.AddSceneDlg.Title="Scène Toevoegen"
 Basic.Main.AddSceneDlg.Text="Voer a.u.b. de naam van de scène in"
 
 Basic.Main.DefaultSceneName.Text="Scène %1"
+
+Basic.Main.PreviewDisabled="Preview is momenteel uitgeschakeld"
 
 Basic.SourceSelect="Maak/Selecteer Bron"
 Basic.SourceSelect.CreateNew="Nieuwe maken"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Gebruik stream encoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Gebruikelijke opnameformaten"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alle Bestanden"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Bestandspad of URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (leeg = standaard)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Containerformaat"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Standaardformaat"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Containerformaatbeschrijving"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio-/Videocodec geschat aan de hand van het bestandspad of de URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Standaardencoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Encoder Uitschakelen"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoderinstellingen (indien gewenst)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder (leeg = standaard)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoderinstellingen (indien gewenst)"
 
 Basic.Settings.Video="Video"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Desktop Audioapparaat 1"
 Basic.Settings.Audio.AuxDevice="Mic/Aux Audioapparaat"
 Basic.Settings.Audio.AuxDevice2="Mic/Aux Audioapparaat 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Aux Audioapparaat 3"
+Basic.Settings.Audio.EnablePushToMute="Push-to-mute inschakelen"
+Basic.Settings.Audio.PushToMuteDelay="Push-to-mute vertraging"
+Basic.Settings.Audio.EnablePushToTalk="Push-to-talk inschakelen"
+Basic.Settings.Audio.PushToTalkDelay="Push-to-talk vertraging"
 
 Basic.Settings.Advanced="Geavanceerd"
+Basic.Settings.Advanced.FormatWarning="Waarschuwing: Andere kleurformaten dan NV12 zijn hoofdzakelijk bedoeld voor opnemen en worden niet aanbevolen om mee te streamen. Streamen kan verhoogd CPU-gebruik opleveren vanwege kleurformaatconversie."
 Basic.Settings.Advanced.Audio.BufferingTime="Audio Buffertijd"
 Basic.Settings.Advanced.Video.ColorFormat="Kleurindeling"
 Basic.Settings.Advanced.Video.ColorSpace="YUV-Kleurruimte"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Downmixen naar Mono"
 Basic.AdvAudio.Panning="Pannen"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Sporen"
+
+Basic.Settings.Hotkeys="Sneltoetsen"
+Basic.Settings.Hotkeys.Pair="Toetsencombinaties gedeeld met '%1' werken als toggle"
+
+Basic.Hotkeys.StartStreaming="Stream Starten"
+Basic.Hotkeys.StopStreaming="Stream Stoppen"
+Basic.Hotkeys.StartRecording="Opname Starten"
+Basic.Hotkeys.StopRecording="Opname Stoppen"
+Basic.Hotkeys.SelectScene="Wissel naar scène"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Links"
+Hotkeys.Right="Rechts"
+Hotkeys.Up="Omhoog"
+Hotkeys.Down="Omlaag"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menu"
+Hotkeys.Space="Spatie"
+Hotkeys.NumpadNum="Numpad %1"
+Hotkeys.NumpadMultiply="Numpad Vermenigvuldigen"
+Hotkeys.NumpadDivide="Numpad Delen"
+Hotkeys.NumpadAdd="Numpad Plus"
+Hotkeys.NumpadSubtract="Numpad Min"
+Hotkeys.NumpadDecimal="Numpad Punt"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Muis %1"
+
+Mute="Mute"
+Unmute="Unmute"
+Push-to-mute="Push-to-mute"
+Push-to-talk="Push-to-talk"
 
