--- a/obs/data/locale/pl-PL.ini
+++ b/obs/data/locale/pl-PL.ini
@@ -19,6 +19,7 @@ Properties="Właściwości"
 MoveUp="Przenieś w górę"
 MoveDown="Przenieś w dół"
 Settings="Ustawienia"
+Display="Ekran"
 Name="Nazwa"
 Exit="Wyjście"
 Mixer="Mikser"
@@ -26,6 +27,11 @@ Browse="Przeglądaj"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Zgubione klatki %1 (%2%)"
+PreviewProjector="Wyświetlanie na pełnym ekranie (podgląd)"
+SceneProjector="Wyświetlanie na pełnym ekranie (scena)"
+SourceProjector="Wyświetlanie na pełnym ekranie (źródło)"
+Clear="Wyczyść"
+Reset="Reset"
 
 NameExists.Title="Nazwa już istnieje"
 NameExists.Text="Nazwa jest już używana."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mikrofon/Wejście liniowe 4"
 Basic.Scene="Scena"
 Basic.DisplayCapture="Przechwytywanie obrazu"
 
+Basic.Main.PreviewConextMenu.Enable="Włącz podgląd"
+
 Basic.Main.AddSceneDlg.Title="Dodaj scenę"
 Basic.Main.AddSceneDlg.Text="Podaj nazwę sceny"
 
 Basic.Main.DefaultSceneName.Text="Scena %1"
+
+Basic.Main.PreviewDisabled="Podgląd jest nieaktywny"
 
 Basic.SourceSelect="Stwórz/Wybierz źródło"
 Basic.SourceSelect.CreateNew="Stwórz nową"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Użyj enkodera streamu)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Popularne formaty plików nagrań"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Wszystkie pliki"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Ścieżka lub adres URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Enkoder video (brak = domyślny)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Format pliku kontenera"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Dźwięk"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Obraz"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Format domyślny"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Opis formatu pliku kontenera"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Kodeki dźwięku i obrazu odczytane z pliku lub adresu URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Domyślny enkoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Enkoder nieaktywny"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Enkoder obrazu"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Ustawienia enkodera video (jeśli są)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Enkoder audio (brak = domyślny)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Enkoder dźwięku"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Ustawienia enkodera audio (jeśli są)"
 
 Basic.Settings.Video="Obraz"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Urządzenie Audio 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/dodatkowe urządzenie audio"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/dodatkowe urządzenie audio 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/dodatkowe urządzenie audio 3"
+Basic.Settings.Audio.EnablePushToMute="Włącz \"naciśnij-aby-wyciszyć\""
+Basic.Settings.Audio.PushToMuteDelay="Opóźnienie \"naciśnij-aby-wyciszyć\""
+Basic.Settings.Audio.EnablePushToTalk="Włącz \"naciśnij-aby-mówić\""
+Basic.Settings.Audio.PushToTalkDelay="Opóźnienie \"naciśnij-aby-mówić\""
 
 Basic.Settings.Advanced="Zaawansowane"
+Basic.Settings.Advanced.FormatWarning="Ostrzeżenie: Formaty koloru inne niż NV12 przeznaczone są głównie do nagrywania i nie są zalecane podczas przesyłania strumieniowego. Użycie innych formatów koloru podczas przesyłania strumieniowego wymagać będzie przekształcenia formatu w locie, co może znacząco zwiększyć obciążenie procesora."
 Basic.Settings.Advanced.Audio.BufferingTime="Czas buforowania dźwięku"
 Basic.Settings.Advanced.Video.ColorFormat="Format koloru"
 Basic.Settings.Advanced.Video.ColorSpace="Przestrzeń kolorów YUV"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Downmix do Mono"
 Basic.AdvAudio.Panning="Rozciągnięcie dźwięku"
 Basic.AdvAudio.SyncOffset="Przesunięcie dźwięku (ms)"
 Basic.AdvAudio.AudioTracks="Ścieżki"
+
+Basic.Settings.Hotkeys="Skróty klawiszowe"
+Basic.Settings.Hotkeys.Pair="Komibnacje klawiszy wspólne z '%1' działają jako przełączniki"
+
+Basic.Hotkeys.StartStreaming="Rozpocznij stream"
+Basic.Hotkeys.StopStreaming="Zakończ stream"
+Basic.Hotkeys.StartRecording="Rozpocznij nagrywanie"
+Basic.Hotkeys.StopRecording="Zatrzymaj nagrywanie"
+Basic.Hotkeys.SelectScene="Przełącz na scenę"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Strzałka w lewo"
+Hotkeys.Right="Strzałka w prawo"
+Hotkeys.Up="Strzałka w górę"
+Hotkeys.Down="Strzałka w dół"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Menu"
+Hotkeys.Space="Spacja"
+Hotkeys.NumpadNum="%1 (Klawiatura numeryczna)"
+Hotkeys.NumpadMultiply="* (Klawiatura numeryczna)"
+Hotkeys.NumpadDivide="/ (Klawiatura numeryczna)"
+Hotkeys.NumpadAdd="+ (Klawiatura numeryczna)"
+Hotkeys.NumpadSubtract="- (Klawiatura numeryczna)"
+Hotkeys.NumpadDecimal=". (Klawiatura numeryczna)"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Mysz %1"
+
+Mute="Wyciszenie"
+Unmute="Wyłącz wyciszenie"
+Push-to-mute="Naciśnij-aby-wyciszyć"
+Push-to-talk="Naciśnij-aby-mówić"
 
