--- a/obs/data/locale/ro-RO.ini
+++ b/obs/data/locale/ro-RO.ini
@@ -86,10 +86,12 @@ Basic.AuxDevice4="Microfon/Aux 4"
 Basic.Scene="Scena"
 Basic.DisplayCapture="Captura de ecran"
 
+
 Basic.Main.AddSceneDlg.Title="Adauga scena"
 Basic.Main.AddSceneDlg.Text="Vă rugăm să introduceţi numele de scena"
 
 Basic.Main.DefaultSceneName.Text="Scena %1"
+
 
 Basic.SourceSelect="Creaţi/Selectaţi Sursa"
 Basic.SourceSelect.CreateNew="Creează nouă"
@@ -241,9 +243,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Utilizaţi codare stream)
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Formate de înregistrare"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Toate fişierele"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Calea fisierului sau URL-ul"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (gol = implicit)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Format de recipient"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Audio"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Formatul implicit"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Descriere Format Recipient"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Codecul Audio/Video ghicit din calea fisierului sau URL-ul"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Encoder implicit"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Dezactivaţi Encoder"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Encoder Video"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Setările video Encoder (dacă există)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder (gol = implicit)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Encoder Audio"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Setările audio Encoder (dacă există)"
 
 Basic.Settings.Video="Video"
@@ -290,4 +300,8 @@ Basic.AdvAudio.Mono="Transformă in Mono"
 Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Compensare Sincronizare (ms)"
 Basic.AdvAudio.AudioTracks="Piese"
+
+
+
+
 
