--- a/obs/data/locale/ru-RU.ini
+++ b/obs/data/locale/ru-RU.ini
@@ -19,6 +19,7 @@ Properties="Свойства"
 MoveUp="Выше"
 MoveDown="Ниже"
 Settings="Настройки"
+Display="Экран"
 Name="Название"
 Exit="Выход"
 Mixer="Микшер"
@@ -26,6 +27,11 @@ Browse="Обзор"
 Mono="Моно"
 Stereo="Стерео"
 DroppedFrames="Пропуск кадров %1 (%2%)"
+PreviewProjector="Полноэкранный проектор (предпросмотр)"
+SceneProjector="Полноэкранный проектор (сцена)"
+SourceProjector="Полноэкранный проектор (источник)"
+Clear="Очистить"
+Reset="Сбросить"
 
 NameExists.Title="Название уже существует"
 NameExists.Text="Это название уже используется."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Сцена"
 Basic.DisplayCapture="Захват экрана"
 
+Basic.Main.PreviewConextMenu.Enable="Включить предпросмотр"
+
 Basic.Main.AddSceneDlg.Title="Добавить сцену"
 Basic.Main.AddSceneDlg.Text="Пожалуйста, введите название сцены"
 
 Basic.Main.DefaultSceneName.Text="Сцена %1"
+
+Basic.Main.PreviewDisabled="В настоящее время предпросмотр выключен"
 
 Basic.SourceSelect="Создать/Выбрать источник"
 Basic.SourceSelect.CreateNew="Создать новый"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Использовать 
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Общие форматы записи"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Все файлы"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Путь к файлу или URL-адрес"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Кодировщик видео (пусто = по умолчанию)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Формат контейнера"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Аудио"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Видео"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Формат по умолчанию"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Описание формата контейнера"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Аудио/видеокодек был угадан по пути к файлу или URL-адресу"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Кодировщик по умолчанию"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Отключить кодировщик"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Кодировщик видео"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Настройки кодировщика видео (если есть)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Кодировщик аудио (пусто = по умолчанию)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Кодировщик аудио"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Настройки кодировщика аудио (если есть)"
 
 Basic.Settings.Video="Видео"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Desktop Аудиоустройство 2"
 Basic.Settings.Audio.AuxDevice="Mic/Auxiliary Аудиоустройство"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary Аудиоустройство 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary Аудиоустройство 3"
+Basic.Settings.Audio.EnablePushToMute="Выключать микрофон по нажатии"
+Basic.Settings.Audio.PushToMuteDelay="Задержка выключения микрофона"
+Basic.Settings.Audio.EnablePushToTalk="Включать микрофон по нажатии"
+Basic.Settings.Audio.PushToTalkDelay="Задержка включения микрофона"
 
 Basic.Settings.Advanced="Расширенные"
+Basic.Settings.Advanced.FormatWarning="Предупреждение: цветовые форматы, отличные от NV12, прежде всего предназначены для записи и не рекомендуются для потокового вещания. Преобразование цветового формата во время вещания может потребовать дополнительную нагрузку на ЦП."
 Basic.Settings.Advanced.Audio.BufferingTime="Время буферизации аудио"
 Basic.Settings.Advanced.Video.ColorFormat="Цветовой формат"
 Basic.Settings.Advanced.Video.ColorSpace="Цветовое пространство YUV"
@@ -290,4 +313,40 @@ Basic.AdvAudio.Mono="Объединение в один канал"
 Basic.AdvAudio.Panning="Панорамирование"
 Basic.AdvAudio.SyncOffset="Смещение синхронизации (мс)"
 Basic.AdvAudio.AudioTracks="Дорожки"
+
+Basic.Settings.Hotkeys="Горячие клавиши"
+Basic.Settings.Hotkeys.Pair="Сочетания клавиш вместе с '%1' действуют как переключатели"
+
+Basic.Hotkeys.StartStreaming="Запустить трансляцию"
+Basic.Hotkeys.StopStreaming="Остановить трансляцию"
+Basic.Hotkeys.StartRecording="Начать запись"
+Basic.Hotkeys.StopRecording="Остановить запись"
+Basic.Hotkeys.SelectScene="Перейти на сцену"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Стрелка влево"
+Hotkeys.Right="Стрелка вправо"
+Hotkeys.Up="Стрелка вверх"
+Hotkeys.Down="Стрелка вниз"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Меню"
+Hotkeys.Space="Пробел"
+
+Mute="Отключить звук"
+Unmute="Включить звук"
+Push-to-mute="Выключать звук по нажатии"
+Push-to-talk="Включать звук по нажатии"
 
