--- a/obs/data/locale/sr-SP.ini
+++ b/obs/data/locale/sr-SP.ini
@@ -19,6 +19,7 @@ Properties="Својства"
 MoveUp="Помери горе"
 MoveDown="Помери доле"
 Settings="Подешавања"
+Display="Екран"
 Name="Име"
 Exit="Излаз"
 Mixer="Миксета"
@@ -26,6 +27,11 @@ Browse="Претражи"
 Mono="Моно"
 Stereo="Стерео"
 DroppedFrames="Испуштени фрејмови %1 (%2%)"
+PreviewProjector="Пројектор целог екрана (преглед)"
+SceneProjector="Пројектор целог екрана (сцена)"
+SourceProjector="Пројектор целог екрана (извор)"
+Clear="Поништи"
+Reset="Врати на фабричко"
 
 NameExists.Title="Име већ постоји"
 NameExists.Text="Име је већ у употреби."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Микрофон/Улаз 4"
 Basic.Scene="Сцена"
 Basic.DisplayCapture="Прикажи улаз"
 
+Basic.Main.PreviewConextMenu.Enable="Омогући преглед"
+
 Basic.Main.AddSceneDlg.Title="Додај сцену"
 Basic.Main.AddSceneDlg.Text="Молим унесите име сцене"
 
 Basic.Main.DefaultSceneName.Text="Сцена %1"
+
+Basic.Main.PreviewDisabled="Преглед је тренутно онемогућен"
 
 Basic.SourceSelect="Направи или изабери извор"
 Basic.SourceSelect.CreateNew="Направи нови"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Користи стрим
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Уобичајени формати снимака"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Све датотеке"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Путања датотеке или URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Видео енкодер (празно=подразумевани)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Формат контејнера"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Звук"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Видео"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Подразумевани формат"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Опис формата контејнера"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Звучни/Видео кодек одређен путањом датотеке или URL-a"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Подразумевани енкодер"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Онемогући енкодер"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Видео енкодер"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Подешавања видео енкодера (ако постоје)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Звучни енкодер (празно=подразумевани)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Звучни енкодер"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Подешавања звучног енкодера (ако постоје)"
 
 Basic.Settings.Video="Видео"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Звук са рачунара 2"
 Basic.Settings.Audio.AuxDevice="Микрофон/Улаз"
 Basic.Settings.Audio.AuxDevice2="Микрофон/Улаз 2"
 Basic.Settings.Audio.AuxDevice3="Микрофон/Улаз 3"
+Basic.Settings.Audio.EnablePushToMute="Омогући стисни-за-мутирање"
+Basic.Settings.Audio.PushToMuteDelay="Стисни-за-мутирање пауза"
+Basic.Settings.Audio.EnablePushToTalk="Омогући Стисни-за-говор"
+Basic.Settings.Audio.PushToTalkDelay="Стисни-за-говор пауза"
 
 Basic.Settings.Advanced="Напредно"
+Basic.Settings.Advanced.FormatWarning="Упозорење: Формати боја различити од NV12 су првенствено намењени за снимање и нису препоручени за стримовање. Стримовање може проузроковати повишено заузеће процесора због претварања формата боја."
 Basic.Settings.Advanced.Audio.BufferingTime="Време баферовања звука"
 Basic.Settings.Advanced.Video.ColorFormat="Формат боја"
 Basic.Settings.Advanced.Video.ColorSpace="YUV простор боја"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Споји у моно"
 Basic.AdvAudio.Panning="Померање"
 Basic.AdvAudio.SyncOffset="Разлика у синхронизацији (ms)"
 Basic.AdvAudio.AudioTracks="Извори"
+
+Basic.Settings.Hotkeys="Пречице"
+Basic.Settings.Hotkeys.Pair="Комбинације тастера дељене са '%1' се понашају као прекидачи"
+
+Basic.Hotkeys.StartStreaming="Почни стримовање"
+Basic.Hotkeys.StopStreaming="Заустави стримовање"
+Basic.Hotkeys.StartRecording="Почни снимање"
+Basic.Hotkeys.StopRecording="Заустави снимање"
+Basic.Hotkeys.SelectScene="Пребаци на сцену"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Стрелица лево"
+Hotkeys.Right="Стрелица десно"
+Hotkeys.Up="Стрелица горе"
+Hotkeys.Down="Стрелица доле"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Мени"
+Hotkeys.Space="Размак"
+Hotkeys.NumpadNum="Нумерички %1"
+Hotkeys.NumpadMultiply="Нумеричка звездица"
+Hotkeys.NumpadDivide="Нумеричка коса црта"
+Hotkeys.NumpadAdd="Нумерички плус"
+Hotkeys.NumpadSubtract="Нумерички минус"
+Hotkeys.NumpadDecimal="Нумеричка тачка"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Миш %1"
+
+Mute="Мутирај"
+Unmute="Одмутирај"
+Push-to-mute="Стисни-за-мутирање"
+Push-to-talk="Стисни-за-говор"
 
