--- a/obs/data/locale/sv-SE.ini
+++ b/obs/data/locale/sv-SE.ini
@@ -19,6 +19,7 @@ Properties="Egenskaper"
 MoveUp="Flytta upp"
 MoveDown="Flytta ned"
 Settings="Inställningar"
+Display="Bildskärm"
 Name="Namn"
 Exit="Avsluta"
 Mixer="Mixer"
@@ -26,6 +27,9 @@ Browse="Bläddra"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Tappade bildrutor %1 (%2%)"
+PreviewProjector="Fullskärm projektor (Förhandsvisa)"
+SceneProjector="Fullskärm projektor (scen)"
+SourceProjector="Fullskärm projektor (källa)"
 
 NameExists.Title="Namnet används redan"
 NameExists.Text="Det namnet används redan."
@@ -86,10 +90,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Scen"
 Basic.DisplayCapture="Bildskärmskälla"
 
+Basic.Main.PreviewConextMenu.Enable="Förhandsvisa"
+
 Basic.Main.AddSceneDlg.Title="Lägg till scen"
 Basic.Main.AddSceneDlg.Text="Vänligen ange ett namn för scenen"
 
 Basic.Main.DefaultSceneName.Text="Scen %1"
+
+Basic.Main.PreviewDisabled="Förhandsvisningen är inaktiverad"
 
 Basic.SourceSelect="Skapa/välj källa"
 Basic.SourceSelect.CreateNew="Skapa ny"
@@ -241,9 +249,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Använd strömkodare)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Vanliga inspelningsformat"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Alla Filer"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Sökväg eller webbadress"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videokodare (tomt = standard)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Kontainerformat"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Ljud"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Standardformat"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Kontainerformatsbeskrivning"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio/Videokodning gissat från sökväg eller URL"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Standardkodare"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Inaktivera Kodare"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Videokodare"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Videokodar-inställningar (om något)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Ljudkodare (tomt = standard)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Ljudkodare"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Ljudkodar-inställningar (om något)"
 
 Basic.Settings.Video="Video"
@@ -290,4 +306,8 @@ Basic.AdvAudio.Mono="Downmixa till Mono"
 Basic.AdvAudio.Panning="Panorering"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
 Basic.AdvAudio.AudioTracks="Spår"
+
+
+
+
 
