--- a/obs/data/locale/tr-TR.ini
+++ b/obs/data/locale/tr-TR.ini
@@ -5,6 +5,7 @@ Region="Türkiye"
 OK="Tamam"
 Apply="Uygula"
 Cancel="İptal"
+Close="Kapat"
 Save="Kaydet"
 Discard="Vazgeç"
 Yes="Evet"
@@ -12,6 +13,7 @@ No="Hayır"
 Add="Ekle"
 Remove="Kaldır"
 Rename="Yeniden Adlandır"
+Filters="Filtreler"
 Properties="Özellikler"
 MoveUp="Yukarı Taşı"
 MoveDown="Aşağı Taşı"
@@ -70,10 +72,14 @@ Basic.AuxDevice4="Mic/Aux 4"
 Basic.Scene="Sahne"
 Basic.DisplayCapture="Ekran Yakalama"
 
+Basic.Main.PreviewConextMenu.Enable="Önizlemeyi Etkinleştir"
+
 Basic.Main.AddSceneDlg.Title="Sahne Ekle"
 Basic.Main.AddSceneDlg.Text="Lütfen sahne adını giriniz"
 
 Basic.Main.DefaultSceneName.Text="Sahne %1"
+
+Basic.Main.PreviewDisabled="Önizleme şu anda devre dışı"
 
 Basic.SourceSelect="Kaynak Oluştur/Seç"
 Basic.SourceSelect.CreateNew="Yeni oluştur"
@@ -88,6 +94,12 @@ Basic.PropertiesWindow.ConfirmTitle="Ayarlar Değiştirildi"
 Basic.StatusBar.Reconnecting="Bağlantı kesildi, yeniden bağlanıyor (%1. deneme)"
 Basic.StatusBar.ReconnectSuccessful="Yeniden bağlantı başarılı"
 
+Basic.Filters="Filtreler"
+Basic.Filters.AsyncFilters="Ses/Video Filtreleri"
+Basic.Filters.AudioFilters="Ses Filtreleri"
+Basic.Filters.EffectFilters="Efekt Filtreleri"
+Basic.Filters.Title="'%1' için filtreler"
+Basic.Filters.AddFilter.Title="Filtre adı"
 
 Basic.TransformWindow.Position="Konum"
 Basic.TransformWindow.Rotation="Döndürme"
@@ -196,6 +208,10 @@ Basic.Settings.Audio.DesktopDevice2="Masaüstü Ses Aygıtı 2"
 Basic.Settings.Audio.AuxDevice="Mic/yardımcı ses aygıtı"
 Basic.Settings.Audio.AuxDevice2="Mic/yardımcı ses aygıtı 2"
 Basic.Settings.Audio.AuxDevice3="Mic/yardımcı ses aygıtı 3"
+
+
+
+
 
 
 
