--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -19,6 +19,7 @@ Properties="属性"
 MoveUp="上移"
 MoveDown="下移"
 Settings="设置"
+Display="显示"
 Name="名称"
 Exit="退出"
 Mixer="混音器"
@@ -26,6 +27,11 @@ Browse="浏览"
 Mono="单声道​"
 Stereo="立体声​​​"
 DroppedFrames="掉帧 %1 (%2%)"
+PreviewProjector="全屏投影仪(预览)"
+SceneProjector="全屏投影仪 (现场)"
+SourceProjector="全屏投影仪(源)"
+Clear="清除"
+Reset="重置"
 
 NameExists.Title="名称已存在"
 NameExists.Text="该名称已被使用"
@@ -86,10 +92,14 @@ Basic.AuxDevice4="麦克风/Aux 4"
 Basic.Scene="场景"
 Basic.DisplayCapture="显示捕获"
 
+Basic.Main.PreviewConextMenu.Enable="开启预览"
+
 Basic.Main.AddSceneDlg.Title="添加场景"
 Basic.Main.AddSceneDlg.Text="请输入场景名称"
 
 Basic.Main.DefaultSceneName.Text="场景 %1"
+
+Basic.Main.PreviewDisabled="预览当前已禁用"
 
 Basic.SourceSelect="创建或选择源"
 Basic.SourceSelect.CreateNew="新建"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(使用流编码器)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="常见的录像格式"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="所有文件"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="文件路径或 URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="视频编码器 (空白 = 默认值)"
+Basic.Settings.Output.Adv.FFmpeg.Format="容器格式"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="音频"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="视频"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="默认格式"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="容器格式说明"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="通过文件路径或者URL推断音频/视频格式"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="默认编码器"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="禁用编码器"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="视频编码器"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="视频编码器设置 (如果有)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="音频编码器 (空白 = 默认值)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="音频编码器"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="视频编码器设置 (如果有)"
 
 Basic.Settings.Video="视频"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="桌面音频设备 2"
 Basic.Settings.Audio.AuxDevice="麦克风/辅助音频设备"
 Basic.Settings.Audio.AuxDevice2="麦克风/辅助音频设备 2"
 Basic.Settings.Audio.AuxDevice3="麦克风/辅助音频设备 3"
+Basic.Settings.Audio.EnablePushToMute="启用按住静音"
+Basic.Settings.Audio.PushToMuteDelay="按住静音延迟"
+Basic.Settings.Audio.EnablePushToTalk="启动按住讲话"
+Basic.Settings.Audio.PushToTalkDelay="按住讲话延时"
 
 Basic.Settings.Advanced="高级"
+Basic.Settings.Advanced.FormatWarning="警告: NV12 之外的颜色格式主要用于录像, 并不推荐在流式传输时使用. 流可能导致更多的 CPU 使用率, 因为需要颜色格式转换."
 Basic.Settings.Advanced.Audio.BufferingTime="音频缓冲时间"
 Basic.Settings.Advanced.Video.ColorFormat="颜色格式"
 Basic.Settings.Advanced.Video.ColorSpace="YUV 颜色空间"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="下降混合为单声道"
 Basic.AdvAudio.Panning="平移"
 Basic.AdvAudio.SyncOffset="同步偏移 (毫秒)"
 Basic.AdvAudio.AudioTracks="轨道"
+
+Basic.Settings.Hotkeys="热键"
+Basic.Settings.Hotkeys.Pair="作为切换的键组合与 '%1' 共享"
+
+Basic.Hotkeys.StartStreaming="开始串流"
+Basic.Hotkeys.StopStreaming="停止串流"
+Basic.Hotkeys.StartRecording="开始录像"
+Basic.Hotkeys.StopRecording="停止录像"
+Basic.Hotkeys.SelectScene="切换到场景"
+
+Hotkeys.Insert="插入"
+Hotkeys.Delete="删除"
+Hotkeys.Home="首页"
+Hotkeys.End="结束"
+Hotkeys.PageUp="上一页"
+Hotkeys.PageDown="下一页"
+Hotkeys.NumLock="Num Lock 键"
+Hotkeys.ScrollLock="滚动锁定"
+Hotkeys.CapsLock="大写锁定"
+Hotkeys.Backspace="退格键"
+Hotkeys.Tab="选项卡"
+Hotkeys.Print="打印"
+Hotkeys.Pause="暂停"
+Hotkeys.Left="左"
+Hotkeys.Right="右"
+Hotkeys.Up="上"
+Hotkeys.Down="下"
+Hotkeys.Windows="窗口"
+Hotkeys.Super="超级"
+Hotkeys.Menu="菜单"
+Hotkeys.Space="空格"
+Hotkeys.NumpadNum="数字键 %1"
+Hotkeys.NumpadMultiply="数字键 乘"
+Hotkeys.NumpadDivide="数字键 除"
+Hotkeys.NumpadAdd="数字键 加"
+Hotkeys.NumpadSubtract="数字键 减"
+Hotkeys.NumpadDecimal="数字键 十进制"
+Hotkeys.AppleKeypadNum="%1 (键盘)"
+Hotkeys.AppleKeypadMultiply="* (键盘)"
+Hotkeys.AppleKeypadDivide="/ (键盘)"
+Hotkeys.AppleKeypadAdd="+ (键盘)"
+Hotkeys.AppleKeypadSubtract="- (键盘)"
+Hotkeys.AppleKeypadDecimal=".(键盘)"
+Hotkeys.AppleKeypadEqual="= (键盘)"
+Hotkeys.MouseButton="鼠标 %1"
+
+Mute="静音"
+Unmute="取消静音"
+Push-to-mute="按住静音"
+Push-to-talk="按住讲话"
 
