--- a/plugins/linux-capture/data/locale/el-GR.ini
+++ b/plugins/linux-capture/data/locale/el-GR.ini
@@ -3,7 +3,7 @@ Screen="Οθόνη"
 CaptureCursor="Σύλληψη δρομέα"
 AdvancedSettings="Ρυθμίσεις για Προχωρημένους"
 XServer="X Server"
-XCCapture="Σύλληψη παραθήρου (XComposite)"
+XCCapture="Σύλληψη Παραθύρου (XComposite)"
 Window="Παράθυρο"
 CropTop="Περικοπή Πάνω (pixels)"
 CropLeft="Περικοπή Αριστερά (pixels)"
