--- a/plugins/linux-v4l2/data/locale/es-ES.ini
+++ b/plugins/linux-v4l2/data/locale/es-ES.ini
@@ -3,6 +3,7 @@ Device="Dispositivo"
 Input="Entrada"
 VideoFormat="Formato de vídeo"
 VideoStandard="Estándar de vídeo"
+DVTiming="Sincronización de Video Digital"
 Resolution="Resolución"
 FrameRate="Frecuencia de imágenes"
 LeaveUnchanged="Dejar sin cambios"
