--- a/plugins/linux-v4l2/data/locale/gl-ES.ini
+++ b/plugins/linux-v4l2/data/locale/gl-ES.ini
@@ -3,6 +3,7 @@ Device="Dispositivo"
 Input="Entrada"
 VideoFormat="Formato de vídeo"
 VideoStandard="Vídeo estándar"
+DVTiming="Axuste DV"
 Resolution="Resolución"
 FrameRate="Velocidade de fotogramas"
 LeaveUnchanged="Deixar sen cambios"
