--- a/plugins/obs-ffmpeg/data/locale/es-ES.ini
+++ b/plugins/obs-ffmpeg/data/locale/es-ES.ini
@@ -9,6 +9,7 @@ Input="Entrada"
 InputFormat="Formato de entrada"
 ForceFormat="Forzar la conversión de formato"
 HardwareDecode="Utilizar la decodificación por hardware cuando esté disponible"
+ClearOnMediaEnd="Ocultar la fuente cuando finaliza la reproducción"
 Advanced="Avanzado"
 AudioBufferSize="Tamaño del buffer de audio (cuadros)"
 VideoBufferSize="Tamaño del buffer de vídeo (cuadros)"
