--- a/plugins/obs-filters/data/locale/de-DE.ini
+++ b/plugins/obs-filters/data/locale/de-DE.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Videoverzögerung (Asynchron)"
 CropFilter="Zuschneiden"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
+SharpnessFilter="Schärfen"
 DelayMs="Verzögerung (Millisekunden)"
 Type="Art"
 MaskBlendType.MaskColor="Alphamaske (Farbkanal)"
