--- a/plugins/obs-filters/data/locale/eu-ES.ini
+++ b/plugins/obs-filters/data/locale/eu-ES.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Bideo Atzerapena (Async)"
 CropFilter="Moztu"
 ChromaKeyFilter="Margo Giltza"
 ColorKeyFilter="Margo Giltza"
+SharpnessFilter="Zorrotza"
 DelayMs="Atzerapen (segundumilaen)"
 Type="Mota"
 MaskBlendType.MaskColor="Alfa Mozorroa (Margo Bidea)"
