--- a/plugins/obs-filters/data/locale/fi-FI.ini
+++ b/plugins/obs-filters/data/locale/fi-FI.ini
@@ -1,4 +1,5 @@
 ColorFilter="Värinkorjaus"
+MaskFilter="Kuvamaski/Sekoitus"
 AsyncDelayFilter="Kuvan viide (Async)"
 CropFilter="Rajaa"
 ChromaKeyFilter="Chroma Key"
@@ -7,6 +8,9 @@ DelayMs="Viive (MS)"
 Type="Tyyppi"
 MaskBlendType.MaskColor="Alpha-maski (värikanava)"
 MaskBlendType.MaskAlpha="Alpha-maski (alfa-kanava)"
+MaskBlendType.BlendMultiply="Sekoitus (Kertova)"
+MaskBlendType.BlendAddition="Sekoitus (Lisäävä)"
+MaskBlendType.BlendSubtraction="Sekoitus (Vähentävä)"
 Path="Polku"
 Color="Väri"
 Opacity="Läpinäkyvyys"
@@ -18,6 +22,8 @@ BrowsePath.AllFiles="Kaikki tiedostot"
 KeyColorType="Avainvärityyppi"
 KeyColor="Avainväri"
 Similarity="Samanlaisuus (1-1000)"
+Smoothness="Tasaisuus (1-1000)"
+ColorSpillReduction="Avainvärin vuodon vähennys (1-1000)"
 Crop.Left="Vasemmalta"
 Crop.Right="Oikealta"
 Crop.Top="Ylhäältä"
