--- a/plugins/obs-filters/data/locale/fr-FR.ini
+++ b/plugins/obs-filters/data/locale/fr-FR.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Délai vidéo (async.)"
 CropFilter="Rogner"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Couleur d'incrustation"
+SharpnessFilter="Accentuer"
 DelayMs="Délai (en millisecondes)"
 Type="Type "
 MaskBlendType.MaskColor="Masque alpha (canal de couleur)"
