--- a/plugins/obs-filters/data/locale/gl-ES.ini
+++ b/plugins/obs-filters/data/locale/gl-ES.ini
@@ -1,6 +1,11 @@
 ColorFilter="Corrección da cor"
+MaskFilter="Máscara/mestura de imaxes"
+AsyncDelayFilter="Atraso do vídeo (asíncrono)"
 CropFilter="Recortar"
+DelayMs="Atraso (milisegundos)"
 Type="Tipo"
+MaskBlendType.MaskColor="Máscara alfa (canle de cor)"
+MaskBlendType.MaskAlpha="Máscara alfa (canle alfa)"
 Path="Camiño"
 Color="Cor"
 Opacity="Opacidade"
@@ -9,8 +14,14 @@ Brightness="Brillo"
 Gamma="Gama"
 BrowsePath.Images="Todo os ficheiros de imaxe"
 BrowsePath.AllFiles="Todos os ficheiros"
+Similarity="Similitude (1-1000)"
+Crop.Left="Á esquerda"
+Crop.Right="Á dereita"
+Crop.Top="Arriba"
+Crop.Bottom="Abaixo"
 Crop.Width="Largura"
 Crop.Height="Altura"
+Crop.Relative="Relativo"
 CustomColor="Personalizar cor"
 Red="Vermello"
 Green="Verde"
