--- a/plugins/obs-filters/data/locale/hu-HU.ini
+++ b/plugins/obs-filters/data/locale/hu-HU.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Videó Késleltetés (Async)"
 CropFilter="Vágás"
 ChromaKeyFilter="Chroma Kulcs"
 ColorKeyFilter="Színkulcs"
+SharpnessFilter="Élesítés"
 DelayMs="Késleltetés (ezredmásodperc)"
 Type="Típus"
 MaskBlendType.MaskColor="Alfa Maszk (Színcsatorna)"
