--- a/plugins/obs-filters/data/locale/it-IT.ini
+++ b/plugins/obs-filters/data/locale/it-IT.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Ritardo video (Asincrono)"
 CropFilter="Ritaglia"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
+SharpnessFilter="Nitidizza"
 DelayMs="Ritardo (in millisecondi)"
 Type="Tipo"
 MaskBlendType.MaskColor="Maschera alfa (canale di colore)"
