--- a/plugins/obs-filters/data/locale/ja-JP.ini
+++ b/plugins/obs-filters/data/locale/ja-JP.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="映像の遅延 (非同期)"
 CropFilter="クロップ"
 ChromaKeyFilter="クロマキー"
 ColorKeyFilter="カラーキー"
+SharpnessFilter="シャープ"
 DelayMs="遅延時間 (ミリ秒)"
 Type="種別"
 MaskBlendType.MaskColor="アルファ マスク(カラー チャンネル)"
