--- a/plugins/obs-filters/data/locale/ko-KR.ini
+++ b/plugins/obs-filters/data/locale/ko-KR.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="비디오 지연 (비동기)"
 CropFilter="자르기"
 ChromaKeyFilter="크로마 키"
 ColorKeyFilter="색상 키"
+SharpnessFilter="선명하게"
 DelayMs="지연 (밀리초)"
 Type="형식"
 MaskBlendType.MaskColor="알파 마스크 (색채 채널)"
