--- a/plugins/obs-filters/data/locale/nl-NL.ini
+++ b/plugins/obs-filters/data/locale/nl-NL.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Videovertraging (Async)"
 CropFilter="Bijsnijden"
 ChromaKeyFilter="Chroma Key"
 ColorKeyFilter="Color Key"
+SharpnessFilter="Verscherpen"
 DelayMs="Vertraging (milliseconden)"
 Type="Type"
 MaskBlendType.MaskColor="Alphamasker (Kleurkanaal)"
