--- a/plugins/obs-filters/data/locale/pl-PL.ini
+++ b/plugins/obs-filters/data/locale/pl-PL.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Opóźnienie wideo (asynchronicznie)"
 CropFilter="Kadrowanie"
 ChromaKeyFilter="Kluczowanie koloru (chroma key)"
 ColorKeyFilter="Kluczowanie koloru (kolor)"
+SharpnessFilter="Wyostrzanie"
 DelayMs="Opóźnienie (milisekundy)"
 Type="Typ"
 MaskBlendType.MaskColor="Maska alfa (kanał koloru)"
