--- a/plugins/obs-filters/data/locale/ru-RU.ini
+++ b/plugins/obs-filters/data/locale/ru-RU.ini
@@ -3,6 +3,8 @@ MaskFilter="Маска изображения/Смешивание"
 AsyncDelayFilter="Задержка видео (асинхронность)"
 CropFilter="Обрезка"
 ChromaKeyFilter="Хромакей"
+ColorKeyFilter="Цветовой ключ"
+SharpnessFilter="Увеличить резкость"
 DelayMs="Задержка (миллисекунд)"
 Type="Тип"
 MaskBlendType.MaskColor="Альфа-маска (канал цвета)"
@@ -18,6 +20,11 @@ Brightness="Яркость"
 Gamma="Гамма"
 BrowsePath.Images="Все файлы изображений"
 BrowsePath.AllFiles="Все файлы"
+KeyColorType="Тип ключевого цвета"
+KeyColor="Ключевой цвет"
+Similarity="Сходство (1-1000)"
+Smoothness="Гладкость (1-1000)"
+ColorSpillReduction="Снижение утечки ключевого цвета (1-1000)"
 Crop.Left="Слева"
 Crop.Right="Справа"
 Crop.Top="Сверху"
