--- a/plugins/obs-filters/data/locale/sr-SP.ini
+++ b/plugins/obs-filters/data/locale/sr-SP.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Видео пауза (асинхроно)"
 CropFilter="Одсецање"
 ChromaKeyFilter="Кључ провидности"
 ColorKeyFilter="Кључ боје"
+SharpnessFilter="Изоштравање"
 DelayMs="Пауза (милисекунде)"
 Type="Врста"
 MaskBlendType.MaskColor="Маска прозирности (канал боје)"
