--- a/plugins/rtmp-services/data/locale/el-GR.ini
+++ b/plugins/rtmp-services/data/locale/el-GR.ini
@@ -2,5 +2,5 @@ StreamingServices="Υπηρεσίες Μετάδοσης"
 CustomStreamingServer="Προσαρμοσμένος Διακομιστής Μετάδοσης"
 Service="Υπηρεσία"
 Server="Διακομιστής"
-StreamKey="Κλειδή μετάδοσης"
+StreamKey="Κλειδί μετάδοσης"
 
