--- a/plugins/win-capture/data/locale/es-ES.ini
+++ b/plugins/win-capture/data/locale/es-ES.ini
@@ -1,3 +1,4 @@
+MonitorCapture="Captura de pantalla"
 WindowCapture="Capturar Ventana"
 WindowCapture.Window="Ventana"
 WindowCapture.Priority="Prioridad de captura de ventana"
@@ -7,6 +8,7 @@ WindowCapture.Priority.Exe="Nombre del archivo ejecutable"
 CaptureCursor="Captura de Cursor"
 Compatibility="Compatibilidad multi adaptador"
 AllowTransparency="Permitir transparencia"
+Monitor="Pantalla"
 PrimaryMonitor="Monitor principal"
 GameCapture="Capturar Juego"
 GameCapture.AnyFullscreen="Capturar cualquier aplicación a pantalla completa"
