--- a/plugins/win-capture/data/locale/fi-FI.ini
+++ b/plugins/win-capture/data/locale/fi-FI.ini
@@ -1,3 +1,4 @@
+MonitorCapture="Kaappaa monitori"
 WindowCapture="Kaappaa ikkuna"
 WindowCapture.Window="Ikkuna"
 WindowCapture.Priority="Ikkunan valintaperuste"
@@ -7,6 +8,7 @@ WindowCapture.Priority.Exe="Suoritetun tiedoston nimi"
 CaptureCursor="Kaappaa kursori"
 Compatibility="Usean sovittimen tuki"
 AllowTransparency="Salli läpinäkyvyys"
+Monitor="Monitori"
 PrimaryMonitor="Ensisijainen näyttö"
 GameCapture="Kaappaa peli"
 GameCapture.AnyFullscreen="Kaappaa mitä tahansa kokoruudun sovellusta"
