--- a/plugins/win-capture/data/locale/tr-TR.ini
+++ b/plugins/win-capture/data/locale/tr-TR.ini
@@ -1,3 +1,4 @@
+MonitorCapture="Ekran Yakalama"
 WindowCapture="Pencere Yakalama"
 WindowCapture.Window="Pencere"
 WindowCapture.Priority="Pencere Eşleşme Önceliği"
@@ -7,6 +8,10 @@ WindowCapture.Priority.Exe="Yürütülebilir Dosya Adı"
 CaptureCursor="İmleci Yakala"
 Compatibility="Çoklu Bağdaştırıcı Uyumluluğu"
 AllowTransparency="Şeffaflığa İzin Ver"
+Monitor="Görüntü"
 PrimaryMonitor="Birincil Ekran"
 GameCapture="Oyun Yakalama"
+GameCapture.AnyFullscreen="Tam ekran herhangi bir uygulamayı yakala"
+GameCapture.ForceScaling="Zorla Ölçekle"
+GameCapture.ScaleRes="Ölçekleme Çözünürlüğü"
 
