--- a/plugins/win-dshow/data/locale/de-DE.ini
+++ b/plugins/win-dshow/data/locale/de-DE.ini
@@ -11,13 +11,13 @@ ConfigureCrossbar="Crossbar konfigurieren"
 ResFPSType="Auflösung/FPS Typ"
 ResFPSType.Custom="Benutzerdefiniert"
 ResFPSType.DevPreferred="Gerätestandard"
-FPS.Matching="Ausgang FPS benutzen"
+FPS.Matching="An Ausgabe angleichen"
 FPS.Highest="Höchstmögliche FPS"
 Resolution="Auflösung"
 VideoFormat="Videoformat"
-VideoFormat.Any="Irgendeins"
+VideoFormat.Any="Beliebig"
 VideoFormat.Unknown="Unbekannt (%1)"
-UseCustomAudioDevice="Verwende eigenes Audiogerät"
+UseCustomAudioDevice="Benutzerdefiniertes Audiogerät verwenden"
 AudioDevice="Audiogerät"
 Buffering="Pufferung"
 Buffering.AutoDetect="Automatisch erkennen"
@@ -25,6 +25,7 @@ Buffering.Enable="Aktivieren"
 Buffering.Disable="Deaktivieren"
 Activate="Aktivieren"
 Deactivate="Deaktivieren"
+FlipVertically="Vertikal spiegeln"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia H.264 Encoder (c985)"
