--- a/plugins/win-dshow/data/locale/el-GR.ini
+++ b/plugins/win-dshow/data/locale/el-GR.ini
@@ -23,6 +23,7 @@ Buffering.Enable="Ενεργοποίηση"
 Buffering.Disable="Απενεργοποίηση"
 Activate="Ενεργοποίηση"
 Deactivate="Απενεργοποίηση"
+FlipVertically="Κάθετη αναστροφή"
 
 Bitrate="Ρυθμός μετάδοσης bit"
 Encoder.C985="Κωδικοποιητής H.264 της AVerMedia (c985)"
