--- a/plugins/win-dshow/data/locale/es-ES.ini
+++ b/plugins/win-dshow/data/locale/es-ES.ini
@@ -25,6 +25,9 @@ Buffering.Enable="Habilitar"
 Buffering.Disable="Deshabilitar"
 Activate="Activar"
 Deactivate="Desactivar"
+FlipVertically="Voltear verticalmente"
 
 Bitrate="Tasa de bits"
+Encoder.C985="Codificador AVerMedia H.264  (c985)"
+Encoder.C353="Codificador H.264 de AVerMedia"
 
