--- a/plugins/win-dshow/data/locale/eu-ES.ini
+++ b/plugins/win-dshow/data/locale/eu-ES.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Gaitu"
 Buffering.Disable="Ezgaitu"
 Activate="Gaitu"
 Deactivate="Desgaitu"
+FlipVertically="Itzulikatu Zutika"
 
 Bitrate="Bitneurria"
 Encoder.C985="AVerMedia H.264 Kodeatzailea (c985)"
