--- a/plugins/win-dshow/data/locale/fi-FI.ini
+++ b/plugins/win-dshow/data/locale/fi-FI.ini
@@ -1,4 +1,4 @@
-VideoCaptureDevice="Videokaappauslaite"
+VideoCaptureDevice="Kaappaa videolaite"
 Device="Laite"
 ColorSpace="YUV väriavaruus"
 ColorSpace.Default="Oletus"
@@ -25,6 +25,9 @@ Buffering.Enable="Ota käyttöön"
 Buffering.Disable="Poista käytöstä"
 Activate="Ota käyttöön"
 Deactivate="Poista käytöstä"
+FlipVertically="Käännä pystysuunnassa"
 
 Bitrate="Bitrate"
+Encoder.C985="AVerMedia H.264 -enkooderi (c985)"
+Encoder.C353="AVerMedia H.264 -enkooderi"
 
