--- a/plugins/win-dshow/data/locale/fr-FR.ini
+++ b/plugins/win-dshow/data/locale/fr-FR.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Activer"
 Buffering.Disable="Désactiver"
 Activate="Activer"
 Deactivate="Désactiver"
+FlipVertically="Retourner verticalement"
 
 Bitrate="Débit"
 Encoder.C985="Encodeur H.264 AVerMedia (c985)"
