--- a/plugins/win-dshow/data/locale/gl-ES.ini
+++ b/plugins/win-dshow/data/locale/gl-ES.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Activar"
 Buffering.Disable="Desactivar"
 Activate="Activar"
 Deactivate="Desactivar"
+FlipVertically="Voltear verticalmente"
 
 Bitrate="Velocidade de bits"
 Encoder.C985="Codificador AVerMedia h264 (c985)"
