--- a/plugins/win-dshow/data/locale/hu-HU.ini
+++ b/plugins/win-dshow/data/locale/hu-HU.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Engedélyezés"
 Buffering.Disable="Letiltás"
 Activate="Aktiválás"
 Deactivate="Kikapcsolás"
+FlipVertically="Függőleges Tükrözés"
 
 Bitrate="Bitráta"
 Encoder.C985="AVerMedia H.264 Kódoló (c985)"
