--- a/plugins/win-dshow/data/locale/it-IT.ini
+++ b/plugins/win-dshow/data/locale/it-IT.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Abilita"
 Buffering.Disable="Disabilita"
 Activate="Attiva"
 Deactivate="Disattiva"
+FlipVertically="Capovolgi verticalmente"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia H.264 Encoder (c985)"
