--- a/plugins/win-dshow/data/locale/ja-JP.ini
+++ b/plugins/win-dshow/data/locale/ja-JP.ini
@@ -25,6 +25,7 @@ Buffering.Enable=" 有効にする"
 Buffering.Disable="無効にする"
 Activate="有効化"
 Deactivate="無効化"
+FlipVertically="垂直方向に反転"
 
 Bitrate="ビットレート"
 Encoder.C985="AVerMedia H.264 エンコーダー (c985)"
