--- a/plugins/win-dshow/data/locale/nb-NO.ini
+++ b/plugins/win-dshow/data/locale/nb-NO.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Aktiver"
 Buffering.Disable="Deaktiver"
 Activate="Aktiver"
 Deactivate="Deaktiver"
+FlipVertically="Vend loddrett"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia H.264 koder (c985)"
