--- a/plugins/win-dshow/data/locale/pl-PL.ini
+++ b/plugins/win-dshow/data/locale/pl-PL.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Włączony"
 Buffering.Disable="Wyłączony"
 Activate="Aktywuj"
 Deactivate="Deaktywuj"
+FlipVertically="Odbicie lustrzane w pionie"
 
 Bitrate="Przepływność (bitrate)"
 Encoder.C985="Enkoder AVerMedia H.264 (c985)"
