--- a/plugins/win-dshow/data/locale/ru-RU.ini
+++ b/plugins/win-dshow/data/locale/ru-RU.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Включить"
 Buffering.Disable="Отключить"
 Activate="Активировать"
 Deactivate="Деактивировать"
+FlipVertically="Отразить вертикально"
 
 Bitrate="Битрейт"
 Encoder.C985="Кодировщик AVerMedia H.264 (c985)"
