--- a/plugins/win-dshow/data/locale/sr-CS.ini
+++ b/plugins/win-dshow/data/locale/sr-CS.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Omogući"
 Buffering.Disable="Onemogući"
 Activate="Aktiviraj"
 Deactivate="Deaktiviraj"
+FlipVertically="Prevrni vertikalno"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia H.264 enkoder (c985)"
