--- a/plugins/win-dshow/data/locale/sr-SP.ini
+++ b/plugins/win-dshow/data/locale/sr-SP.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Омогући"
 Buffering.Disable="Онемогући"
 Activate="Активирај"
 Deactivate="Деактивирај"
+FlipVertically="Преврни вертиикално"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia h264 енкодер (c985)"
