--- a/plugins/win-dshow/data/locale/zh-CN.ini
+++ b/plugins/win-dshow/data/locale/zh-CN.ini
@@ -25,6 +25,7 @@ Buffering.Enable="启用"
 Buffering.Disable="停用"
 Activate="激活"
 Deactivate="取消激活"
+FlipVertically="垂直翻转"
 
 Bitrate="比特率"
 Encoder.C985="AVerMedia H.264 编码器 (c985)"
