--- a/obs/data/locale/sr-CS.ini
+++ b/obs/data/locale/sr-CS.ini
@@ -19,6 +19,7 @@ Properties="Svojstva"
 MoveUp="Pomeri gore"
 MoveDown="Pomeri dole"
 Settings="Podešavanja"
+Display="Ekran"
 Name="Ime"
 Exit="Izlaz"
 Mixer="Mikseta"
@@ -26,6 +27,11 @@ Browse="Pretraži"
 Mono="Mono"
 Stereo="Stereo"
 DroppedFrames="Ispušteni frejmovi %1 (%2%)"
+PreviewProjector="Projektor celog ekrana (pregled)"
+SceneProjector="Projektor celog ekrana (scena)"
+SourceProjector="Projektor celog ekrana (izvor)"
+Clear="Poništi"
+Reset="Vrati na fabričko"
 
 NameExists.Title="Ime već postoji"
 NameExists.Text="Ime je već u upotrebi."
@@ -86,10 +92,14 @@ Basic.AuxDevice4="Mikrofon/Ulaz 4"
 Basic.Scene="Scena"
 Basic.DisplayCapture="Prikaži ulaz"
 
+Basic.Main.PreviewConextMenu.Enable="Omogući pregled"
+
 Basic.Main.AddSceneDlg.Title="Dodaj scenu"
 Basic.Main.AddSceneDlg.Text="Molim unesite ime scene"
 
 Basic.Main.DefaultSceneName.Text="Scena %1"
+
+Basic.Main.PreviewDisabled="Pregled je trenutno onemogućen"
 
 Basic.SourceSelect="Napravi ili izaberi izvor"
 Basic.SourceSelect.CreateNew="Napravi novi"
@@ -241,9 +251,17 @@ Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Koristi strim enkoder)"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Uobičajeni formati snimaka"
 Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="Sve datoteke"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="Putanja datoteke ili URL"
-Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video enkoder (prazno=podrazumevani)"
+Basic.Settings.Output.Adv.FFmpeg.Format="Format kontejnera"
+Basic.Settings.Output.Adv.FFmpeg.FormatAudio="Zvuk"
+Basic.Settings.Output.Adv.FFmpeg.FormatVideo="Video"
+Basic.Settings.Output.Adv.FFmpeg.FormatDefault="Podrazumevani format"
+Basic.Settings.Output.Adv.FFmpeg.FormatDesc="Opis formata kontejnera"
+Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Zvučni/Video kodek određen putanjom datoteke ili URL-a"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Podrazumevani enkoder"
+Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Onemogući enkoder"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video enkoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Podešavanja video enkodera (ako postoje)"
-Basic.Settings.Output.Adv.FFmpeg.AEncoder="Zvučni enkoder (prazno=podrazumevani)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Zvučni enkoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Podešavanja zvučnog enkodera (ako postoje)"
 
 Basic.Settings.Video="Video"
@@ -274,8 +292,13 @@ Basic.Settings.Audio.DesktopDevice2="Zvuk sa računara 2"
 Basic.Settings.Audio.AuxDevice="Mikrofon/Ulaz"
 Basic.Settings.Audio.AuxDevice2="Mikrofon/Ulaz 2"
 Basic.Settings.Audio.AuxDevice3="Mikrofon/Ulaz 3"
+Basic.Settings.Audio.EnablePushToMute="Omogući stisni-za-mutiranje"
+Basic.Settings.Audio.PushToMuteDelay="Stisni-za-mutiranje pauza"
+Basic.Settings.Audio.EnablePushToTalk="Omogući Stisni-za-govor"
+Basic.Settings.Audio.PushToTalkDelay="Stisni-za-govor pauza"
 
 Basic.Settings.Advanced="Napredno"
+Basic.Settings.Advanced.FormatWarning="Upozorenje: Formati boja različiti od NV12 su prvenstveno namenjeni za snimanje i nisu preporučeni za strimovanje. Strimovanje može prouzrokovati povišeno zauzeće procesora zbog pretvaranja formata boja."
 Basic.Settings.Advanced.Audio.BufferingTime="Vreme baferovanja zvuka"
 Basic.Settings.Advanced.Video.ColorFormat="Format boja"
 Basic.Settings.Advanced.Video.ColorSpace="YUV prostor boja"
@@ -290,4 +313,54 @@ Basic.AdvAudio.Mono="Spoji u mono"
 Basic.AdvAudio.Panning="Pomeranje"
 Basic.AdvAudio.SyncOffset="Razlika u sinhronizaciji (ms)"
 Basic.AdvAudio.AudioTracks="Izvori"
+
+Basic.Settings.Hotkeys="Prečice"
+Basic.Settings.Hotkeys.Pair="Kombinacije tastera deljene sa '%1' se ponašaju kao prekidači"
+
+Basic.Hotkeys.StartStreaming="Započni strimovanje"
+Basic.Hotkeys.StopStreaming="Zaustavi strimovanje"
+Basic.Hotkeys.StartRecording="Počni snimanje"
+Basic.Hotkeys.StopRecording="Zaustavi snimanje"
+Basic.Hotkeys.SelectScene="Prebaci na scenu"
+
+Hotkeys.Insert="Insert"
+Hotkeys.Delete="Delete"
+Hotkeys.Home="Home"
+Hotkeys.End="End"
+Hotkeys.PageUp="Page Up"
+Hotkeys.PageDown="Page Down"
+Hotkeys.NumLock="Num Lock"
+Hotkeys.ScrollLock="Scroll Lock"
+Hotkeys.CapsLock="Caps Lock"
+Hotkeys.Backspace="Backspace"
+Hotkeys.Tab="Tab"
+Hotkeys.Print="Print"
+Hotkeys.Pause="Pause"
+Hotkeys.Left="Strelica levo"
+Hotkeys.Right="Strelica desno"
+Hotkeys.Up="Strelica gore"
+Hotkeys.Down="Strelica dole"
+Hotkeys.Windows="Windows"
+Hotkeys.Super="Super"
+Hotkeys.Menu="Meni"
+Hotkeys.Space="Razmak"
+Hotkeys.NumpadNum="Numerički %1"
+Hotkeys.NumpadMultiply="Numerička zvezdica"
+Hotkeys.NumpadDivide="Numerička kosa crta"
+Hotkeys.NumpadAdd="Numerički plus"
+Hotkeys.NumpadSubtract="Numerički minus"
+Hotkeys.NumpadDecimal="Numerička tačka"
+Hotkeys.AppleKeypadNum="%1 (Keypad)"
+Hotkeys.AppleKeypadMultiply="* (Keypad)"
+Hotkeys.AppleKeypadDivide="/ (Keypad)"
+Hotkeys.AppleKeypadAdd="+ (Keypad)"
+Hotkeys.AppleKeypadSubtract="- (Keypad)"
+Hotkeys.AppleKeypadDecimal=". (Keypad)"
+Hotkeys.AppleKeypadEqual="= (Keypad)"
+Hotkeys.MouseButton="Miš %1"
+
+Mute="Mutiraj"
+Unmute="Odmutiraj"
+Push-to-mute="Stisni-za-mutiranje"
+Push-to-talk="Stisni-za-govor"
 
