--- a/plugins/obs-ffmpeg/data/locale/el-GR.ini
+++ b/plugins/obs-ffmpeg/data/locale/el-GR.ini
@@ -9,6 +9,7 @@ InputFormat="Μορφή Εισόδου"
 ForceFormat="Εξαναγκασμός μετατροπής μορφής"
 HardwareDecode="Χρήση αποκωδικοποίησης υλικού όταν είναι διαθέσιμη"
 ClearOnMediaEnd="Απόκρυψη πηγής όταν τελειώνει η αναπαραγωγή"
+Advanced="Σύνθετες επιλογές"
 FrameDropping="Επίπεδο Ρίψης Καρέ"
 DiscardNone="Κανένα"
 DiscardDefault="Προεπιλογή (άκυρα πακέτα)"
