--- a/plugins/obs-ffmpeg/data/locale/ja-JP.ini
+++ b/plugins/obs-ffmpeg/data/locale/ja-JP.ini
@@ -8,7 +8,7 @@ Looping="繰り返し"
 Input="入力"
 InputFormat="入力フォーマット"
 ForceFormat="強制的にフォーマットを変換"
-HardwareDecode="可能な場合ハードウェアでコードを使用"
+HardwareDecode="可能な場合ハードウェアデコードを使用"
 ClearOnMediaEnd="再生終了時にソースを非表示にする"
 Advanced="高度な設定"
 AudioBufferSize="音声バッファーサイズ(フレーム)"
