--- a/plugins/obs-filters/data/locale/sr-CS.ini
+++ b/plugins/obs-filters/data/locale/sr-CS.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="Video pauza (asinhrono)"
 CropFilter="Odsecanje"
 ChromaKeyFilter="Ključ providnosti"
 ColorKeyFilter="Ključ boje"
+SharpnessFilter="Izoštravanje"
 DelayMs="Pauza (milisekunde)"
 Type="Vrsta"
 MaskBlendType.MaskColor="Maska prozirnosti (kanal boje)"
