--- a/plugins/obs-filters/data/locale/zh-CN.ini
+++ b/plugins/obs-filters/data/locale/zh-CN.ini
@@ -4,6 +4,7 @@ AsyncDelayFilter="视频延迟(异步)"
 CropFilter="剪裁"
 ChromaKeyFilter="色度键"
 ColorKeyFilter="色值"
+SharpnessFilter="锐化"
 DelayMs="延迟(毫秒)"
 Type="类型"
 MaskBlendType.MaskColor="Alpha 蒙版 (颜色通道)"
