--- a/plugins/win-dshow/data/locale/ko-KR.ini
+++ b/plugins/win-dshow/data/locale/ko-KR.ini
@@ -25,6 +25,7 @@ Buffering.Enable="사용"
 Buffering.Disable="사용 안 함"
 Activate="활성화"
 Deactivate="비활성화"
+FlipVertically="수직으로 뒤집기"
 
 Bitrate="품질(비트레이트)"
 Encoder.C985="AVerMedia h264 인코더 (c985)"
