--- a/plugins/win-dshow/data/locale/nl-NL.ini
+++ b/plugins/win-dshow/data/locale/nl-NL.ini
@@ -25,6 +25,7 @@ Buffering.Enable="Inschakelen"
 Buffering.Disable="Uitschakelen"
 Activate="Activeren"
 Deactivate="Deactiveren"
+FlipVertically="Verticaal spiegelen"
 
 Bitrate="Bitrate"
 Encoder.C985="AVerMedia H.264 Encoder (c985)"
