--- a/plugins/win-dshow/data/locale/tr-TR.ini
+++ b/plugins/win-dshow/data/locale/tr-TR.ini
@@ -1,5 +1,6 @@
 VideoCaptureDevice="Video Yakalama Aygıtı"
 Device="Aygıt"
+ColorSpace="YUV Renk Uzayı"
 ColorSpace.Default="Varsayılan"
 ColorRange="YUV Renk Aralığı"
 ColorRange.Partial="Kısmi"
@@ -9,6 +10,7 @@ ConfigureVideo="Video Yapılandırma"
 ConfigureCrossbar="Crossbarı Ayarla"
 ResFPSType="Çözünürlük/FPS Türü"
 ResFPSType.Custom="Özel"
+ResFPSType.DevPreferred="Aygıt Varsayılanı"
 FPS.Matching="Çıkış FPS'ini Eşleştir"
 FPS.Highest="En Yüksek FPS"
 Resolution="Çözünürlük"
@@ -17,7 +19,15 @@ VideoFormat.Any="Herhangi"
 VideoFormat.Unknown="Bilinmiyor (%1)"
 UseCustomAudioDevice="Özel ses aygıtını kullan"
 AudioDevice="Ses Aygıtı"
+Buffering="Arabelleğe Alma"
 Buffering.AutoDetect="Otomatik Algıla"
+Buffering.Enable="Etkinleştir"
+Buffering.Disable="Devredışı Bırak"
+Activate="Etkinleştir"
+Deactivate="Devredışı Bırak"
+FlipVertically="Dikey Çevir"
 
 Bitrate="Bit hızı"
+Encoder.C985="AVerMedia H.264 Kodlayıcısı (c985)"
+Encoder.C353="AVerMedia H.264 Kodlayıcısı"
 
